--- a/app/locale/nl_NL/Mage_Api2.csv
+++ b/app/locale/nl_NL/Mage_Api2.csv
@@ -1,4 +1,9 @@
 "%s","%s"
+"%s role is a special one and can't be changed.","%s is een speciale rol en kan niet worden gewijzigd."
+"%s role is a special one and can't be deleted.","%s is een speciale rol en kan niet worden verwijderd."
+"%s role is a special one and can\'t be changed.","%s is een speciale rol en kan niet worden gewijzigd.","en_US_1.8.0","en_US_1.9.3.7"
+"%s role is a special one and can\'t be deleted.","%s is een speciale rol en kan niet worden verwijderd.","en_US_1.8.0","en_US_1.9.3.7"
+"%s role is protected.","De rol %s is beveiligd"
 "ACL Attribute Rules","ACL attribuut rollen"
 "ACL Attributes Information","ACL attributen informatie"
 "Add","Toevoegen"
@@ -58,7 +63,7 @@
 "Customer First Name","Klantvoornaam"
 "Customer ID","Klant-ID"
 "Customer Last Name","Klant achternaam"
-"Customer Middle Name","Klant tussenvoegsel"
+"Customer Middle Name","Klant midden-naam"
 "Customer Prefix","Klant voorvoegsel"
 "Customer Suffix","Klant achtervoegsel"
 "Default Image","Standaard afbeelding"
@@ -233,6 +238,3 @@
 "Web services","Webservices"
 "Write","Schrijf"
 "ZIP/Postal Code","Postcode"
-"%s role is a special one and can't be changed.","%s is een speciale rol en kan niet worden gewijzigd."
-"%s role is a special one and can't be deleted.","%s is een speciale rol en kan niet worden verwijderd."
-"%s role is protected.","De rol %s is beveiligd"
