--- a/app/locale/nl_NL/Mage_Authorizenet.csv
+++ b/app/locale/nl_NL/Mage_Authorizenet.csv
@@ -1,6 +1,7 @@
 "--Please Select--","--Maak een keuze--"
 "API Login ID","API Login-ID"
 "Accepted Currency","Geaccepteerde valuta"
+"Amount of %s approved by payment gateway. Transaction ID: ""%s"".","Het bedrag %s is goedgekeurd door het betaalplatform. Transactie ID: ""%s""."
 "Authorize.net Direct Post","Authorize.net Direct Post"
 "Card Verification Number","Card Verificatie Nummer"
 "Card Verification Number Visual Reference","Card Verificate Nummer Visuele Referentie"
@@ -26,6 +27,7 @@
 "Payment authorization error. Transacion id is empty.","Betaalfout. Het transactie id is leeg."
 "Payment error. Order was not found.","Betaalfout. De bestelling is niet gevonden."
 "Payment error. Paid amount doesn't match the order amount.","Betaalfout. Betaald bedrag komt niet overeen met totaal bestelling."
+"Payment error. Paid amount doesn\'t match the order amount.","Betaalfout. Betaald bedrag komt niet overeen met totaal bestelling.","en_US_1.5.0","en_US_1.9.3.7"
 "Payment from Applicable Countries","Betaling vanuit alle landen"
 "Payment from Specific Countries","Betaling vanuit specifieke landen"
 "Please, choose payment method","Kies een betaalmethode"
@@ -38,4 +40,3 @@
 "Transaction Key","Transactiecode"
 "What is this?","Wat is dit?"
 "You will be required to enter your payment details before you place an order.","U moet uw betaalgegevens invullen bij het plaatsen van een bestelling"
-"Amount of %s approved by payment gateway. Transaction ID: ""%s"".","Het bedrag %s is goedgekeurd door het betaalplatform. Transactie ID: ""%s""."
