--- a/app/locale/nl_NL/Mage_Bundle.csv
+++ b/app/locale/nl_NL/Mage_Bundle.csv
@@ -1,3 +1,4 @@
+"%1$s incl tax.","%1$s incl BTW."
 "* Required Fields","* Verplichte velden"
 "-- Select --","-- Selecteer --"
 "Add New Option","Nieuwe optie toevoegen"
@@ -6,10 +7,17 @@
 "As low as","Vanaf"
 "Bundle Items","Bundel-artikelen"
 "Bundle Product","Bundelproduct"
+"Bundle Product View Summary","Bundel product-bekijk samenvatting"
+"Buy %1$s","Koop %1$s"
+"Buy %1$s for","Koop %1$s voor"
+"Buy %1$s for %2$s","Koop %1$s voor %2$s"
+"Buy %1$s for %2$s (%3$s incl. tax) each","Koop %1$s voor %2$s (%3$s incl. BTW) per stuk"
+"Buy %1$s for %2$s each","Koop %1$s voor %2$s per stuk"
 "Buy %1$s with %2$s discount each","Bestel %1$s met %2$s korting"
 "Catalog Product View (Bundle)","Catalogus Product (Bundel)"
 "Checkbox","Checkbox"
 "Choose a selection...","Kies een optie&hellip;"
+"Click for price","Klik voor prijs"
 "Close","Sluiten"
 "Default","Standaard"
 "Default Qty","Standaard-aantal"
@@ -17,11 +25,13 @@
 "Drop-down","Dropdown"
 "Dynamic","Dynamisch"
 "Excl. Tax","Excl. BTW"
+"Excl. Tax:","Excl. BTW"
 "Fixed","Vast"
 "From","Van"
 "From:","Van:"
 "Gift Message","Bericht bij kado"
 "Incl. Tax","Incl. BTW"
+"Incl. Tax:","Incl. BTW"
 "Input Type","Type invoerveld"
 "Is Required","Is verplicht"
 "Message:","Bericht:"
@@ -32,6 +42,7 @@
 "Percent","Percentage"
 "Percent Discount","Kortingspercentage"
 "Please Select Products to Add","Kies producten om toe te voegen a.u.b."
+"Please enter a number greater 0 in this field.","Vul een getal groter dan 0 in."
 "Please enter search conditions to view products.","Vul zoekcriteria in om producten te bekijken"
 "Please select options for product.","Kies opties voor het product a.u.b."
 "Please specify product option(s).","Selecteer de productoptie(s)."
@@ -42,6 +53,7 @@
 "Qty:","Aantal"
 "Radio Buttons","Radio buttons"
 "Required options are not selected.","De verplichte opties zijn niet geselecteerd."
+"SKU","SKU","en_US_1.9.1","en_US_1.9.3.7"
 "Selected required options are not available.","De geselecteerde opties zijn niet beschikbaar."
 "Separately","Apart"
 "Ship Bundle Items","Bundel-artikelen verzenden"
@@ -52,20 +64,9 @@
 "To","Tot"
 "To:","Tot:"
 "Together","Samen"
+"Total incl. Tax: %1$s","Totaal incl. BTW: %1$s"
 "Use Default Value","Standaard waarde gebruiken"
 "User Defined Qty","Door gebruiker gedefinieerd aantal"
-"Please enter a number greater 0 in this field.","Vul een getal groter dan 0 in."
-"%1$s incl tax.","%1$s incl BTW."
-"Buy %1$s","Koop %1$s"
-"Buy %1$s for","Koop %1$s voor"
-"Buy %1$s for %2$s","Koop %1$s voor %2$s"
-"Buy %1$s for %2$s (%3$s incl. tax) each","Koop %1$s voor %2$s (%3$s incl. BTW) per stuk"
-"Buy %1$s for %2$s each","Koop %1$s voor %2$s per stuk"
-"Click for price","Klik voor prijs"
-"Excl. Tax:","Excl. BTW"
-"Incl. Tax:","Incl. BTW"
-"Total incl. Tax: %1$s","Totaal incl. BTW: %1$s"
 "and","en"
 "each","per stuk"
 "save","bespaar"
-"Bundle Product View Summary","Bundel product-bekijk samenvatting"
