--- a/app/locale/nl_NL/Mage_CatalogInventory.csv
+++ b/app/locale/nl_NL/Mage_CatalogInventory.csv
@@ -1,6 +1,6 @@
 """%s"" is not available in the requested quantity. %s of the items will be backordered.","""%s"" is niet beschikbaar in de gewenste hoeveelheid. %s items worden als backorder geplaatst."
-"%s is available for purchase in increments of %s only.","%s kan enkel gekocht worden in veelvoud van %s."
 "%s is available for purchase in increments of %s","%s kan gekocht worden in veelvoud van %s."
+"%s is available for purchase in increments of %s only.","%s kan enkel gekocht worden in veelvoud van %s."
 "%s is not a correct comparsion method.","% is geen juiste methode voor vergelijken"
 "<strong>Note</strong> that these settings are applicable to cart line items, not the whole cart.","Let op! Deze instellingen gelden voor de artikelen, niet voor de hele winkelwagen."
 "Add Minimum Qty","Voeg minimum hoeveelheid toe"
@@ -14,6 +14,7 @@
 "Catalog Inventory","Catalogus voorraad"
 "Decrease Stock When Order is Placed","Verminder voorraad wanneer bestelling is geplaatst"
 "Display Out of Stock Products","Toon niet op voorraad producten"
+"Display products availability in stock in the frontend","Toon de beschikbaarheid van de producten in de frontend"
 "Enable Qty Increments","Activeer opklimmende aantallen"
 "In Stock","Op voorraad"
 "Index Product Stock Status","Voorraadstatus"
@@ -24,12 +25,17 @@
 "Maximum Qty Allowed in Shopping Cart","Maximaal hoeveelheid in winkelwagen"
 "Minimum Qty","Minimum hoeveelheid"
 "Minimum Qty Allowed in Shopping Cart","Minimaal hoeveelheid in winkelwagen"
+"Multi update product stock data","Multi-update product voorraad-data"
 "No Backorders","Geen backorders"
 "Not all products are available in the requested quantity","Niet alle producten zijn beschikbaar in de gewenste hoeveelheid"
 "Notify for Quantity Below","Melden bij hoeveelheid lager dan"
+"Only %s left","Slechts 100 %s over","en_US_1.9.1","en_US_1.9.3.7"
 "Only X left Threshold","Maar X op voorraad"
 "Out of Stock","Niet op voorraad"
+"Product Name","Productnaam","en_US_1.9.1","en_US_1.9.3.7"
 "Product Stock Options","Instellingen productvoorraad"
+"Products will still be shown by direct product URLs.","Producten zullen worden getoond bij een directe product-URL"
+"Qty","Qty","en_US_1.9.1","en_US_1.9.3.7"
 "Qty Increments","Opklimmend aantal"
 "Qty for Item's Status to Become Out of Stock","Aantal voordat product niet meer op voorraad is"
 "Retrieve stock data","Voorraadgegevens ophalen"
@@ -37,6 +43,8 @@
 "Rule price","Regelprijs"
 "Set Items' Status to be In Stock When Order is Cancelled","Status wijzigen naar 'Op Voorraad' bij annuleren van order."
 "Some of the products are currently out of stock","Enkele  producten zijn momenteel niet op voorraad"
+"Some of the products are currently out of stock.","Sommige van de producten zijn op dit moment niet op voorraad."
+"Some of the products are not available","Sommige producten zijn niet beschikbaar.","en_US_1.9.3.0","en_US_1.9.3.7"
 "Some of the products cannot be ordered in requested quantity.","Enkele producten kunnen niet in de gewenste hoeveelheid worden besteld"
 "Some of the products cannot be ordered in the requested quantity.","Enkele producten kunnen niet in de gewenste hoeveelheid worden besteld"
 "Stock Options","Voorraadopties"
@@ -55,7 +63,3 @@
 "Update","Bijwerken"
 "Update product stock data","Productvoorraad bijwerken"
 "Update the Product","Het product bijwerken"
-"Display products availability in stock in the frontend","Toon de beschikbaarheid van de producten in de frontend"
-"Multi update product stock data","Multi-update product voorraad-data"
-"Products will still be shown by direct product URLs.","Producten zullen worden getoond bij een directe product-URL"
-"Some of the products are currently out of stock.","Sommige van de producten zijn op dit moment niet op voorraad."
