--- a/app/locale/nl_NL/Mage_Checkout.csv
+++ b/app/locale/nl_NL/Mage_Checkout.csv
@@ -1,6 +1,11 @@
 "%s was added to your shopping cart.","%s is toegevoegd aan uw winkelwagen."
 "%s was updated in your shopping cart.","%s is bijgewerkt in uw winkelwagen."
+"(Excl. Tax)","(Excl. BTW)","en_US_1.9.1","en_US_1.9.3.7"
+"(Incl. Tax)","(Incl. BTW)","en_US_1.9.1","en_US_1.9.3.7"
 "* Required Fields","* Verplichte velden"
+"<strong style=""color:red"">Important!</strong> Enabling this option means
+                            that your custom templates used in checkout process contain form_key output.
+                            Otherwise checkout may not work.","<strong style=""color:red"">Belangrijk!</strong> Als u deze optie inschakelt, bevatten uw aangepaste sjablonen die in het bestelproces worden gebruikt de uitvoer form_key. Anders werkt het betalingsproces mogelijk niet.","1.9.3.7+","1.9.3.7+"
 "Add New Address","Nieuw adres toevoegen"
 "Add New Condition","Nieuwe voorwaarde toevoegen"
 "Add coupon code for shopping cart","Voeg coupon code toe voor winkelwagen"
@@ -32,6 +37,9 @@
 "Billing Address","Factuuradres"
 "Billing Information","Factuurgegevens"
 "Billing Information - %s","Factuuradres - %s"
+"Can not remove the item.","Kan het item niet verwijderen.","en_US_1.9.1","en_US_1.9.3.7"
+"Can not save item.","Kan item niet opslaan.","en_US_1.9.1","en_US_1.9.3.7"
+"Cancel","Annuleer","en_US_1.9.1","en_US_1.9.3.7"
 "Cancel Coupon","Kortingscode annuleren"
 "Cannot add item to the shopping cart.","Kan dit artikel niet toevoegen aan de winkelwagen"
 "Cannot add the item to shopping cart","Kan dit artikel niet toevoegen aan de winkelwagen"
@@ -44,14 +52,15 @@
 "Cannot update shopping cart.","Kan de winkelwagen niet bijwerken"
 "Cannot update the item.","Kan het item niet bijwerken."
 "Card Verification Number Visual Reference","Kaart bevestigingsnummer visuele referentie"
+"Cart","Kaart","en_US_1.9.1","en_US_1.9.3.7"
 "Cart Product API","Winkelwagen product-API"
-"View Cart","Bekijk winkelwagen"
 "Cart Subtotal:","Subtotaal winkelwagen:"
 "Change","Wijzigen"
 "Change Billing Address","Wijzigen"
 "Checkbox Text","Tekst checkbox"
 "Checkout","Afrekenen"
 "Checkout Conditions","Betalingsvoorwaarden"
+"Checkout Forms Extra","Checkout Forms Extra","en_US_1.9.1","en_US_1.9.3.7"
 "Checkout Method","Registreren en afrekenen"
 "Checkout Options","Afrekenopties"
 "Checkout Progress Wrapper","Voortgangblok"
@@ -60,9 +69,11 @@
 "Checkout as Guest","Afrekenen zonder account"
 "Checkout as a Guest or Register","Maak een account aan of reken af zonder account"
 "Checkout with Multiple Addresses","Afrekenen met meerdere adressen"
+"Checkout without creating an account","Plaats uw bestelling als gast"
 "City","Plaats"
 "Clear Shopping Cart","Leeg winkelwagen"
-"Click <a href=""%s"" onclick=""this.target='_blank'"">here to print</a> a copy of your order confirmation.","<a href=""%s"" onclick=""this.target='_blank'"">Druk een kopie af</a> van uw bestelbevestiging."
+"Click <a href=""%s"" onclick=""this.target='_blank'"">here to print</a> a copy of your order confirmation.","<a href=""%s"" onclick=""this.target='_blank'"">Druk een kopie van uw bestelbevestiging af </a>."
+"Click <a href=""%s"" onclick=""this.target=\'_blank\'"">here to print</a> a copy of your order confirmation.","Click <a href=""%s"" onclick=""this.target=\'_blank\'"">here to print</a> a copy of your order confirmation.","en_US_1.4.0","en_US_1.9.3.7"
 "Click <a href=""%s"">here</a> to continue shopping.","Klik <a href=""%s"">hier</a> om verder te gaan met winkelen."
 "Close","Sluiten"
 "Company","Bedrijf"
@@ -114,12 +125,15 @@
 "Edit item parameters","Wijzig productopties"
 "Email Address","E-mailadres"
 "Empty Cart","Winkelwagen leegmaken"
+"Empty Shopping Cart Content Before","Empty Shopping Cart Content Before","en_US_1.9.1","en_US_1.9.3.7"
+"Enable Form Key Validation On Checkout","Enable Form Key Validation On Checkout","en_US_1.9.3.7","en_US_1.9.3.7"
 "Enable Onepage Checkout","OnePageCheckout (standaard Checkout) activeren"
 "Enable Terms and Conditions","Algemene Voorwaarden activeren"
 "Enabled","Ingeschakeld"
 "Enter a New Address","Voer een nieuw adres in"
 "Enter your coupon code if you have one.","Voer een kortingscode in als u er één hebt."
 "Enter your destination to get a shipping estimate.","Voer een bestemming in om een schatting te krijgen van de verzendkosten."
+"Estimate","Estimate","en_US_1.9.1","en_US_1.9.3.7"
 "Estimate Shipping and Tax","Verzendkosten en BTW schatten"
 "Excl. Tax","Excl. BTW"
 "Fast and easy check out","Snel een eenvoudig afrekenen."
@@ -156,6 +170,7 @@
 "Manage Terms and Conditions","Beheer algemene voorwaarden"
 "Maximum Display Recently Added Item(s)","Maximum aantal recent toegevoegde items"
 "Maximum qty allowed for Shipping to multiple addresses is %s","Maximale aantal voor verzenden naar verschillende adressen is %s"
+"Mini-cart promotion block","Mini-cart promotion block","en_US_1.9.1","en_US_1.9.3.7"
 "Minimum order amount is %s","Minimale bestelhoeveelheid is %s"
 "Move","Verplaatsen"
 "Move to Wishlist","Naar verlanglijst"
@@ -176,10 +191,12 @@
 "My Cart","Winkelwagen"
 "My Cart (%s item)","Winkelwagen (%s artikel)"
 "My Cart (%s items)","Winkelwagen (%s artikelen)"
+"My Cart Extra Actions","Winkelwagen > Extra acties "
 "My Cart Link","Link naar winkelwagen"
 "New Address","Nieuw adres"
 "New Condition","Nieuwe Algemene Voorwaarden"
 "New Terms and Conditions","Nieuwe voorwaarden"
+"No Payment Methods","Geen betaalmethoden"
 "ORDER TOTAL WILL BE DISPLAYED BEFORE YOU SUBMIT THE ORDER","TOTAAL BESTELLING ZAL WORDEN GETOOND VOORDAT U DE BESTELLING PLAATST"
 "One Page Checkout","Afrekenen"
 "One Page Checkout Failure","Afrekenen > Bestelling Mislukt"
@@ -200,7 +217,9 @@
 "Payment Failed Template","Sjabloon mislukte betaling"
 "Payment Information","Betaalmethode"
 "Payment Method","Betaalmethode"
+"Payment Methods After","Betaalmethodes na","en_US_1.9.1","en_US_1.9.3.7"
 "Payment Methods After Checkout Button","Betaalmethodes na Checkout knop"
+"Payment Methods Before","Betaalmethodes voor","en_US_1.9.1","en_US_1.9.3.7"
 "Payment Methods Before Checkout Button","Betaalmethodes voor Checkout knop"
 "Payment method information","Informatie betaalmethode"
 "Payment method is not defined","Betaalmethode is niet gedefinieerd"
@@ -229,7 +248,9 @@
 "Products","Producten"
 "Qty","Aantal"
 "Qty:","Aantal:"
+"Quantity","Aantal","en_US_1.9.1","en_US_1.9.3.7"
 "Quantity was recalculated from %d to %d","Hoeveelheid is opnieuw berekend van %d tot %d"
+"Quick checkout without creating an account.","Plaats uw bestelling als gast."
 "Quote Lifetime (days)","Geldigheid winkelwagen (dagen)"
 "Quote item does not exist.","Offerte-product bestaat niet."
 "Quote item is not found.","Offerte-product is niet gevonden."
@@ -237,6 +258,7 @@
 "Register","Registreren"
 "Register and save time!","Voordelen van een account"
 "Register to Create an Account","Registreer om een account aan te maken"
+"Register to create an account","Maak een account aan"
 "Register with us for future convenience:","Bewaar uw gegevens. Dat werkt sneller en makkelijker."
 "Remove Item","Artikel verwijderen"
 "Remove This Item","Dit artikel verwijderen"
@@ -248,6 +270,7 @@
 "Retrieve information about shopping cart","Haal informatie op over de winkelwagen"
 "Review Order","Bestelling bekijken"
 "Review Order - %s","Bestelling  %s bekijken"
+"SKU","SKU","en_US_1.9.1","en_US_1.9.3.7"
 "Sales","Verkopen"
 "Save Condition","Algemene Voorwaarden opslaan"
 "Save in address book","Opslaan in adresboek"
@@ -280,6 +303,8 @@
 "Shipping selection is not applicable.","Verzendmethode is niet toepasbaar."
 "Shopping Cart","Winkelwagen"
 "Shopping Cart Form Before","Eerdere aangemaakte winkelwagen"
+"Shopping Cart Items After","Winkelwagen > Artikelen na","en_US_1.9.1","en_US_1.9.3.7"
+"Shopping Cart Items Before","Winkelwagen > Artikelen voor","en_US_1.9.1","en_US_1.9.3.7"
 "Shopping Cart Sidebar","Zijbalk winkelwagen"
 "Shopping Cart Sidebar Extra Actions","Winkelwagen > Extra Acties"
 "Shopping Cart is Empty","Uw winkelwagen is leeg"
@@ -319,6 +344,7 @@
 "Total for this address","Totaal voor dit adres"
 "Unable to set Payment Method.","Het is niet mogelijk deze Betaalmethode in te stellen"
 "Unit Price","Prijs per stuk"
+"Update","Update","en_US_1.9.1","en_US_1.9.3.7"
 "Update Cart","Bijwerken"
 "Update Qty &amp; Addresses","Aantallen en adressen bijwerken"
 "Update Shopping Cart","Winkelwagen bijwerken"
@@ -327,8 +353,10 @@
 "Update product(s) quantities in shopping cart","Aantal van product(en) bijwerken in winkelwagen"
 "Use Billing Address","Factuuradres gebruiken"
 "VAT Number","BTW-nummer"
+"View Cart","Bekijk winkelwagen"
 "View Shopping Cart","Bekijk winkelwagen"
-"We are processing your order and you will soon receive an email with details of the order. Once the order has shipped you will receive another email with a link to track its progress.","We zijn bezig met het verwerken van uw bestelling. U ontvangt binnenkort een e-mail  met de details van uw bestelling. Wanneer de bestelling verzonden is, ontvangt u nog een e-mail met een link om het pakket te volgen."
+"We are processing your order and you will soon receive an email with details of the order. Once the order has shipped you will receive another email with a link to track its progress.","We zijn bezig met het verwerken van uw bestelling. U ontvangt binnenkort een e-mail met de details van uw bestelling. Wanneer de bestelling verzonden is, ontvangt u nog een e-mail met een link om het pakket te volgen."
+"What&#39;s this?","What&#39;s this?","en_US_1.9.1","en_US_1.9.3.7"
 "What's this?","Wat is dit?"
 "You have no items in your shopping cart.","U heeft geen producten in uw winkelwagen."
 "You will receive an order confirmation email with details of your order and a link to track its progress.","U ontvangt een e-mail ter bevestiging van uw bestelling met de details van uw bestelling en een link om de voortgang te kunnen volgen."
@@ -340,10 +368,7 @@
 "Your order has been received.","Uw bestelling is ontvangen"
 "Your order number is ","Uw bestelnummer is"
 "Your recurring payment profiles:","Uw terugkerende abonnementen:"
+"Zip","Zip","en_US_1.9.1","en_US_1.9.3.7"
 "Zip/Postal Code","Postcode"
-"Checkout without creating an account","Plaats uw bestelling als gast"
-"Quick checkout without creating an account.","Plaats uw bestelling als gast."
-"Register to create an account","Maak een account aan"
-"Click <a href=""%s"" onclick=""this.target='_blank'"">here to print</a> a copy of your order confirmation.","<a href=""%s"" onclick=""this.target='_blank'"">Druk een kopie van uw bestelbevestiging af </a>."
-"No Payment Methods","Geen betaalmethoden"
-"My Cart Extra Actions","Winkelwagen > Extra acties "
+"ok","ok","en_US_1.9.1","en_US_1.9.3.7"
+"or","of","en_US_1.9.1","en_US_1.9.3.7"
