--- a/app/locale/nl_NL/Mage_Core.csv
+++ b/app/locale/nl_NL/Mage_Core.csv
@@ -6,19 +6,27 @@
 "<strong style=""color:red"">Warning!</strong> When using Store Code in URLs, in some cases system may not work properly if URLs without Store Codes are specified in the third party services (e.g. PayPal etc.).","<strong style=""color:red"">Waarschuwing!</strong> Als u winkelcode's toevoegt aan de URLs werkt het systeem in sommige gevallen niet helemaal goed met third-party diensten (bv. PayPal, etc.)."
 "A category object is required for determining the product request path.","Er is een categorie-object vereist om het productverzoekpad te determineren."
 "Add Block Names to Hints","Bloknamen aan Hints toevoegen"
+"Add Secret Key To Url","Add Secret Key To Url","en_US_1.9.2.0","en_US_1.9.3.7"
 "Add Secret Key to URLs","Voeg geheime sleutel toe aan URLs"
 "Add Store Code to Urls","Winkelcode aan URL's toevoegen"
 "Admin","Beheerder"
 "Admin Base URL","Admin basis-URL"
 "Admin User Emails","Admin gebruikers e-mails"
+"Admin routing compatibility mode for extensions","Admin routing compatibility mode for extensions","en_US_1.9.2.4","en_US_1.9.3.7"
 "Advanced","Geavanceerd"
-"After selecting a new media storage location, press the Synchronize butto",""
-"o transfer all media to that location. Media will not be available in the ne",""
-"ocation until the synchronization process is complete.",""
+"After selecting a new media storage location, press the Synchronize button
+                                to transfer all media to that location. Media will not be available in the new
+                                location until the synchronization process is complete.","After selecting a new media storage location, press the Synchronize button to transfer all media to that location. Media will not be available in the new location until the synchronization process is complete.","en_US_1.5.1","en_US_1.9.3.7"
 "Allow Countries","Landen toestaan"
+"Allow Magento Backend to run in frame","Allow Magento Backend to run in frame","en_US_1.9.1","en_US_1.9.3.7"
+"Allow Magento Frontend to run in frame","Allow Magento Frontend to run in frame","en_US_1.9.1","en_US_1.9.3.7"
 "Allow Symlinks","Symlinks toestaan"
 "Allowed IPs (comma separated)","Toegestane IP's (door komma's gescheiden)"
 "Allowed file types: ICO, PNG, GIF, JPG, JPEG, APNG, SVG. Not all browsers support all these formats!","Toegestande bestandstypen: ICO, PNG, GIF, JPG, JPEG, APNG, SVG. Niet alle browsers ondersteunen al deze formaten!"
+"Allowed file types: ICO, PNG, GIF, JPG, JPEG, APNG. Not all browsers support all these formats!","Toegestande bestandstypen: ICO, PNG, GIF, JPG, JPEG, APNG. Niet alle browsers ondersteunen al deze formaten!","en_US_1.9.2.4","en_US_1.9.3.7"
+"Allowed file types: jpeg, gif, png.","Toegestande bestandstypen: jpeg, gif, png.","1.6.2+","1.9.3.7+"
+"Allowed file types: jpg, jpeg, gif, png","Toegestande bestandstypen: jpg, jpeg, gif, png.","1.7.0.0+","1.9.3.7+"
+"Allowed file types: jpg, jpeg, gif, png. To make logo look good on high-resolution displays, upload an image that is 2x normal size and then specify 1x dimensions in width/height fields below.","Toegestande bestandstypen: jpg, jpeg, gif, png. Um das Logo auf hoch&shy;auflösenden Displays gut aussehen zu lassen, laden Sie ein Bild mit der zweifachen Normal&shy;größe hoch und geben Sie anschließend in den nach&shy;stehenden Feldern die Breite und Höhe der einfachen Normalgröße an.","1.9.1.1+","1.9.3.7+"
 "Allows customers to stay logged in when switching between different stores.","Stelt bezoekers instaat om ingelogd te blijven, zelfs bij het switchen van winkels."
 "Alternative text for next link in pagination menu. If empty, default arrow image will used.","Alternatieve tekst voor volgende link in pagineringsmenu. Wanneer u deze leeg laat, wordt de standaard pijl getoond."
 "Alternative text for previous link in pagination menu. If empty, default arrow image will used.","Alternatieve tekst voor vorige link in pagineringsmenu. Wanneer u deze leeg laat, wordt de standaard pijl getoond."
@@ -42,16 +50,19 @@
 "Before modifying the website code please make sure that it is not used in index.php.","Controleer voordat u de winkelzicht aanpast, of het niet gebruikt wordt in index.php"
 "Block with name ""%s"" already exists","Blok met naam ""%s"" bestaat al"
 "Browser Capabilities Detection","Detectie van browsermogelijkheden"
+"CSRF protection","CSRF protection","en_US_1.9.2.0","en_US_1.9.3.7"
 "CSS Settings","CSS instellingen"
 "Cache Storage Management","Beheer cachegeheugen"
 "Cache storage may contain additional data. Are you sure that you want flush it?","Cache-opslag bevat wellicht extra gegevens. Weet u zeker dat u deze wilt legen?"
 "Can not create invoice. Order was not found.","Kan geen factuur aanmaken. Bestelling is niet gevonden."
-"Can't retrieve request object","Kan verzoekobject niet ophalen"
 "Can't retrieve entity config: %s","Kan de configuratie van een entiteit niet ophalen: %s"
+"Can't retrieve request object","Kan verzoekobject niet ophalen"
+"Can\'t retrieve entity config: %s","Kan de configuratie van een entiteit niet ophalen: %s","en_US_1.4.0","en_US_1.9.3.7"
 "Cancel","Annuleren"
 "Cannot complete this operation from non-admin area.","Kan deze actie niet voltooien vanuit een niet-admin gebied"
 "Card type does not match credit card number.","Kaartnummer niet herkend door creditcard-maatschappij/"
 "Code","Interne naam"
+"Comma-delimited list of files that will be included inside &lt;style&gt; tag for all templates that include use the '{{var non_inline_styles}}' variable. File path is relative to skin/frontend/PACKAGE/THEME/css/","Door komma's gescheiden lijst van bestanden die worden opgenomen in de tag &lt;style&gt; voor alle sjablonen die de variabele '{{var non_inline_styles}}' bevatten. Bestandspad is relatief voor skin/frontend/PACKAGE/THEME/css/","1.9.1.1+","1.9.3.7+"
 "Controller file was loaded but class does not exist","Controller-bestand is geladen, maar de class bestaat niet"
 "Cookie Domain","Cookie Domein"
 "Cookie Lifetime","Cookie levensduur"
@@ -110,12 +121,18 @@
 "Edit Store","Winkel bewerken"
 "Edit Store View","Winkelzicht bewerken"
 "Edit Website","Website wijzigen"
+"Email - Footer","E-mail - Voettekst","en_US_1.9.1","en_US_1.9.3.7"
+"Email - Header","E-mail - Koptekst","en_US_1.9.1","en_US_1.9.3.7"
+"Email Footer Template","E-mail - Sjabloon voor voettekst","en_US_1.9.1","en_US_1.9.3.7"
+"Email Header Template","E-mail - Sjabloon voor koptekst","en_US_1.9.1","en_US_1.9.3.7"
 "Empty identifier field name","Lege identifier van veldnaam"
 "Empty main table name","Lege naam hoofdtabel"
 "Enable Charts","Grafieken tonen"
 "Enabled","Ingeschakeld"
 "Enabled for Admin","Ingeschakeld voor backend"
 "Enabled for Frontend","Ingeschakeld voor frontend"
+"Enabling ability to run Magento in a frame is not recommended for security reasons.","Enabling ability to run Magento in a frame is not recommended for security reasons.","en_US_1.9.2.4","en_US_1.9.3.7"
+"Enabling this setting increases risk of automated attacks against admin functionality.","Enabling this setting increases risk of automated attacks against admin functionality.","en_US_1.9.2.4","en_US_1.9.3.7"
 "Environment Update Time","Update tijd"
 "Error in file: ""%s"" - %s","Fout in bestand: ""%s"" - %s"
 "European Union Countries","Landen uit Europese Unie"
@@ -145,20 +162,26 @@
 "Host","Hostnaam"
 "How many links to display at once.","Geef aan hoeveel links tegelijkertijd getoond mogen worden."
 "ID Path for Specified Store","ID-pad voor opgegeven winkel"
+"If present, this will be included in all Transactional Emails","Indien aanwezig, wordt dit opgenomen in alle transactionele e-mails.","1.9.1.1+","1.9.3.7+"
 "If the current frame position does not cover utmost pages, will render link to current position plus/minus this value.","Als de huidige positie van het frame niet de uiterste pagina's bevat, zal de render verwijzen naar de huidige positie plus/min deze waarde."
 "Incorrect credit card expiration date.","Onjuiste vervaldatum van creditcard."
 "Input type ""%value%"" not found in the input types list.","Input-soort ""%value%"" niet gevonden in input-soorten-lijst."
+"Invalid MIME type.","Ongeldig MIME-type.","en_US_1.9.2.4","en_US_1.9.3.7"
 "Invalid URL '%value%'.","Ongeldige URL '%value%'."
 "Invalid base url type","Ongeldig basis-URL type"
 "Invalid block name to set child %s: %s","Ongeldige bloknaam om kind in te stellen %s: %s"
 "Invalid block type: %s","Ongeldig bloktype: %s"
 "Invalid block: %s","Ongeldig blok: %s"
 "Invalid connection","Ongeldige connectie"
+"Invalid date","Ongeldige datum"
+"Invalid image.","Ongeldige afbeelding.","en_US_1.9.3.7","en_US_1.9.3.7"
 "Invalid layout update handle","Ongeldige lay-out update handeling"
 "Invalid messages storage ""%s"" for layout messages initialization","Ongeldige berichtenopslag ""%s"" voor initialisatie lay-out berichten"
 "Invalid query","Ongeldige query"
 "Invalid transactional email code: ","Ongeldige transactionele e-mail-code:"
+"Invalid transactional email code: %s","Ongeldige transactionele email code: %s"
 "Invalid website's configuration path: %s","Ongeldige website's configuratie-pad: %s"
+"Invalid website\'s configuration path: %s","Ongeldige website's configuratie-pad: %s","en_US_1.4.2","en_US_1.9.3.7"
 "JavaScript Settings","JavaScript instellingen"
 "Layout","Lay-out"
 "Leave empty for access from any location.","Indien het veld leeg is, zal deze functionaliteit voor iedereen zichtbaar zijn"
@@ -166,12 +189,16 @@
 "Locale","Taal"
 "Locale Options","Lokalisatie-opties"
 "Log Settings","Log-instellingen"
-"Logging from Mage::log(). File is located in {{base_dir}}/var/log","Logbestand wordt opgeslagen in: {{base_dir}}/var/log"
-"Logging from Mage::logException(). File is located in {{base_dir}}/var/log","Logbestand wordt opgeslagen in: {{base_dir}}/var/log"
+"Logging from Mage::log(). File is located in {{base_dir}}/var/log","Logging from Mage::log(). File is located in {{base_dir}}/var/log"
+"Logging from Mage::log(). File is located in {{base_dir}}/var/log. Allowed file extensions: log, txt, html, csv","Logging from Mage::log(). File is located in {{base_dir}}/var/log. Allowed file extensions: log, txt, html, csv","en_US_1.9.3.7","en_US_1.9.3.7"
+"Logging from Mage::logException(). File is located in {{base_dir}}/var/log","Logging from Mage::logException(). File is located in {{base_dir}}/var/log"
+"Logging from Mage::logException(). File is located in {{base_dir}}/var/log. Allowed file extensions: log, txt, html, csv","Logging from Mage::logException(). File is located in {{base_dir}}/var/log. Allowed file extensions: log, txt, html, csv","en_US_1.9.3.7","en_US_1.9.3.7"
 "Login is Case Sensitive","Wachtwoord is hoofdlettergevoelig"
+"Logo Height","Hoogte van het logo","1.9.1.1+","1.9.3.7+"
 "Logo Image","Logo afbeelding"
 "Logo Image Alt","Alt-tekst logo"
 "Logo Image Src","Bronbestand van logo"
+"Logo Width","Breedte van het logo","1.9.1.1+","1.9.3.7+"
 "Magento info","Magento informatie"
 "Magento info API","Magento API informatie"
 "Mail Sending Settings","Mailinstellingen"
@@ -181,6 +208,7 @@
 "Media Storage","Media opslag"
 "Merge CSS Files","CSS bestanden samengevoegen"
 "Merge JavaScript Files","JavaScript-bestanden samenvoegen"
+"Message recipients data must be set.","Message recipients data must be set.","en_US_1.9.1","en_US_1.9.3.7"
 "Miscellaneous HTML","Diverse HTML"
 "Miscellaneous Scripts","Diverse scripts"
 "Model collection resource name is not defined.","Bronnaam model collection is niet gedefinieerd."
@@ -192,7 +220,9 @@
 "New Store View","Nieuwe winkelzicht"
 "New Website","Nieuwe website"
 "No","Nee"
+"Non-inline CSS File(s)","Niet-inline CSS-bestand(en)","1.9.1.1+","1.9.3.7+"
 "Offloader header","Offloader header"
+"Only necessary if image has been uploaded above. Enter number of pixels, without appending ""px"".","Alleen nodig als bovenstaande afbeelding is geüpload. Voer het aantal pixels in, zonder toevoeging van ""px"".","1.9.1.1+","1.9.3.7+"
 "PHP SOAP extension is required.","PHP SOAP extensie is nodig."
 "Package","Pakket"
 "Pagination","Paginering"
@@ -201,14 +231,18 @@
 "Parent directory does not exist: %s","Bovenliggende folder bestaat niet: %s"
 "Path ""%value%"" is not available and cannot be used.","Pad ""%value%"" is niet beschikbaar en kan niet gebruikt worden."
 "Path ""%value%"" is protected and cannot be used.","Pad ""%value%"" is beveiligd en kan niet worden gebruikt."
+"Path ""%value%"" may not include parent directory traversal (""../"", ""..\\).""","Path ""%value%"" may not include parent directory traversal (""../"", ""..\\).""","en_US_1.5.1","en_US_1.9.3.7"
 "Please define flag code.","Definieer 'flag code' a.u.b."
+"Please enter 6 or more characters without leading or trailing spaces.","Voer alstublieft 6 of meer tekens in zonder voorloop- of volgspaties.","en_US_1.9.3.0","en_US_1.9.3.7"
 "Please enter 6 or more characters. Leading or trailing spaces will be ignored.","Voer a.u.b. zes of meer tekens in. Spaties aan begin of eind zullen worden genegeerd."
-"Please enter 7 or more characters. Password should contain both numeric and alphabetic characters.","Voer a.u.b. zes of meer tekens in . Wachtwoorden moeten zowel numerieke en alfanumerieke tekens bevatten."
+"Please enter 7 or more characters. Password should contain both numeric and alphabetic characters.","Voer a.u.b. zes of meer tekens in Wachtwoorden moeten zowel numerieke en alfanumerieke tekens bevatten."
 "Please enter a number 0 or greater in this field.","Voer in dit veld a.u.b. een getal gelijk aan of groter dan 0 in."
 "Please enter a number 1 or greater in this field.","Voer in dit veld a.u.b. een getal gelijk aan of groter dan 1 in."
 "Please enter a number greater than 0 in this field.","Voer in dit veld a.u.b. een getal groter dan 0 in."
 "Please enter a number lower than 100.","Voer in dit veld a.u.b. een getal lager dan 100 in."
 "Please enter a valid $ amount. For example $100.00.","Voer een geldig € bedrag op. Bijvoorbeeld: €100,00."
+"Please enter a valid URL Key. For example ""example-page"", ""example-page.html"" or ""anotherlevel/example-page"".","Please enter a valid URL Key. For example ""example-page"", ""example-page.html"" or ""anotherlevel/example-page"".","en_US_1.4.2","en_US_1.9.3.7"
+"Please enter a valid URL Key. For example ""example-page"",""example-page.html"" or ""anotherlevel/example-page"".",""
 "Please enter a valid URL. For example http://www.example.com or www.example.com","Voer a.u.b. een geldige URL in. Bijvoorbeeld http://www.voorbeeld.com of www.voorbeeld.com."
 "Please enter a valid URL. Protocol is required (http://, https:// or ftp://)","Geef een geldige URL op. Protocol is vereist (http://, https:// or ftp://)"
 "Please enter a valid XML-identifier. For example something_1, block5, id-4.","Voer a.u.b. een geldige XML-identifier in. Bijvoorbeeld something_1, block5, id-4."
@@ -252,7 +286,10 @@
 "Port (25)","Poort (25)"
 "Profiler","Profiler"
 "Recovery Link Expiration Period (days)","Wachtwoord-herstellink-verloop-periode (dagen)"
+"Recovery Link Expiration Period (hours)","Recovery Link Expiration Period (hours)","en_US_1.9.3.0","en_US_1.9.3.7"
 "Request Path for Specified Store","Pad opvragen voor gespecificeerde winkel"
+"Request path length exceeds allowed %s symbols.","Request path lengte is langer dan de toegestane %s karakters."
+"Requested file may not include parent directory traversal (""../"", ""..\\ notation)""","Requested file may not include parent directory traversal (""../"", ""..\\ notation)""","en_US_1.5.1","en_US_1.9.3.7"
 "Requested invalid store ""%s""","Ongeldige winkel opgevraagd ""%s"""
 "Resource is not set.","Bron is niet ingesteld."
 "Retrieve info about current Magento installation","Haal informatie op over huidige Magento-installatie"
@@ -281,6 +318,7 @@
 "Set Return-Path","Ontvangstadres voor e-mails instellen."
 "Set as Default","Instellen als standaard"
 "Skin (Images / CSS)","Skin (Afbeeldingen / CSS)"
+"Small Logo Image Src","Small Logo Image Src","en_US_1.9.1","en_US_1.9.3.7"
 "Sort Order","Sorteervolgorde"
 "Specified date/time ""%1$s"" do not match format ""%2$s"".","Gespecificeerde datum/tijd ""%1$s"" matcht het format ""%2$s"" niet."
 "Start date cannot be greater than end date.","Startdatum kan niet later zijn dan einddatum."
@@ -293,6 +331,7 @@
 "Store Contact Information","Contactinformatie"
 "Store Contact Telephone","Telefoonnummer webwinkel"
 "Store Email Addresses","E-mailadressen van winkel"
+"Store Hours of Operation","Winkel openingstijden","en_US_1.9.1","en_US_1.9.3.7"
 "Store Information","Winkelgegevens"
 "Store Name","Winkelnaam"
 "Store View","Winkelzicht"
@@ -308,6 +347,7 @@
 "Templates","Sjablonen"
 "Text length does not satisfy specified text range.","Tekstlengte komt niet overeen met de gespecificeerde lengte."
 "The %s you entered is invalid. Please make sure that it follows ""http://domain.com/"" format.","De %s welke u hebt ingevuld is ongeldig. Zorg er voor dat het overeenkomt met het format ""http://domein.com/""."
+"The From Date value should be less than or equal to the To Date value.","De Datum vanaf"" moet eerder zijn dan de ""Datum tot""."""
 "The store code may contain only letters (a-z), numbers (0-9) or underscore(_), the first character must be a letter","De winkelcode mag alleen letters (a-z), cijfers (0-9) of een underscore (_) bevatten. Het eerste teken moet een letter zijn."
 "The store does not exist","De winkel bestaat niet"
 "The store has been deleted.","De winkel is verwijderd."
@@ -383,13 +423,3 @@
 "You will have to log in after you save your custom admin path.","U zult opnieuw moeten inloggen als u het custom admin-pad aanpast."
 "Your design change for the specified store intersects with another one, please specify another date range.","Uw designverandering voor de geselecteerde winkel conflicteert met een andere. Selecteer een andere datum."
 "database ""%s""","database ""%s"""
-"After selecting a new media storage location, press the Synchronize butto",""
-"o transfer all media to that location. Media will not be available in the ne",""
-"ocation until the synchronization process is complete.","After selecting a new media storage location, press the Synchronize butto o transfer all media to that location. Media will not be available in the ne ocation until the synchronization process is complete."
-"Invalid transactional email code: %s","Ongeldige transactionele email code: %s"
-"Path ""%value%"" may not include parent directory traversal (""../"",""..\)."""
-"Please enter a valid URL Key. For example ""example-page"",""example-page.html"" or ""anotherlevel/example-page""."
-"Request path length exceeds allowed %s symbols.","Request path lengte is langer dan de toegestane %s karakters."
-"Requested file may not include parent directory traversal (""../"",""..\ notation)"""
-"The From Date value should be less than or equal to the To Date value.","De "Datum vanaf" moet eerder zijn dan de "Datum tot"."
-"Invalid date","Ongeldige datum"
