--- a/app/locale/nl_NL/Mage_Directory.csv
+++ b/app/locale/nl_NL/Mage_Directory.csv
@@ -3,6 +3,7 @@
 "Base Currency","Basis-valuta"
 "Base currency is used for all online payment transactions. Scope is defined by the catalog price scope (""Catalog"" > ""Price"" > ""Catalog Price Scope"").","Basis valuta wordt gebruikt voor alle online transacties. Zie ook Catalogus > Prijs > Catalogus Prijs Scope"
 "Can't convert rate from ""%s-%s"".","Kan wisselkoers niet converteren van ""%s-%s""."
+"Can\'t convert rate from ""%s-%s"".","Kan wisselkoers niet converteren van ""%s-%s"".","en_US_1.7.0","en_US_1.9.3.7"
 "Cannot retrieve rate from %s.","Kan geen waarde achterhalen van %s"
 "Connection Timeout in Seconds","Connectie timeout in seconden"
 "Continue &raquo;","Ga verder %raquo;"
@@ -39,9 +40,11 @@
 "State is required for","Staat is verplicht voor"
 "State/Province","Provincie"
 "States Options","Staat-opties"
+"Strikeiron Email Update Warnings","Strikeiron Email update waarschuwingen"
 "Unable to initialize the import model.","Niet mogelijk om het import model te initialiseren"
 "Undefined rate from ""%s-%s"".","Ongedefinieerd rate van ""%s-%s""."
 "WARNING:","WAARSCHUWING:"
 "Webservicex","Webservicex instellingen"
+"Your Currency","Uw valuta","en_US_1.9.1","en_US_1.9.3.7"
+"Your Currency:","Uw valuta:","en_US_1.9.1","en_US_1.9.3.7"
 "Your current currency is: %s","Uw huidige valuata is: %s"
-"Strikeiron Email Update Warnings","Strikeiron Email update waarschuwingen"
