--- a/app/locale/nl_NL/Mage_Downloadable.csv
+++ b/app/locale/nl_NL/Mage_Downloadable.csv
@@ -41,6 +41,7 @@
 "Max. Downloads","Max. downloads"
 "Message:","Bericht:"
 "Move","Verplaatsen"
+"Move to wishlist","Verplaats naar wens lijst","en_US_1.9.1","en_US_1.9.3.7"
 "My Downloadable Products","Downloads"
 "Open Links in New Window","Links openen in nieuw venster"
 "Order #","Bestelnummer"
@@ -64,6 +65,7 @@
 "Remove links and samples from downloadable product","Verwijder links en voorbeelden van download-product"
 "Requested link does not exist.","Gevraagde link is niet beschikbaar"
 "Retrieve links and samples list from downloadable product","Haal links en voorbeeld op van download-product"
+"SKU","SKU","en_US_1.9.1","en_US_1.9.3.7"
 "Sample","demo"
 "See price before order confirmation.","Bekijk prijs voordat u de bestelling plaatst."
 "Shareable","Deelbaar"
@@ -72,6 +74,7 @@
 "Sort Order","Sorteervolgorde"
 "Start Download","Start het downloaden"
 "Status","Status"
+"Subtotal","Subtotal","en_US_1.9.1","en_US_1.9.3.7"
 "The file does not exist.","Dit bestand bestaat niet"
 "The link has expired.","Deze link is verlopen"
 "The link is not available.","Deze link is niet beschikbaar"
@@ -80,6 +83,7 @@
 "To:","Tot:"
 "U","U"
 "Unlimited","Onbeperkt"
+"Update","Update","en_US_1.9.1","en_US_1.9.3.7"
 "Use Content-Disposition","Gebruik Content-Disposition"
 "Use Default Value","Standaardwaarden gebruiken"
 "View Order","Bestelling bekijken"
