--- a/app/locale/nl_NL/Mage_Eav.csv
+++ b/app/locale/nl_NL/Mage_Eav.csv
@@ -32,7 +32,6 @@
 "A joint field with this alias (%s) is already declared","Een joint-field met deze alias (%s) is al gedeclareerd."
 "Add Option","Voeg optie toe"
 "An error occurred while loading a record, aborting. Error: %s","Er deed zich een fout voor tijdens het laden van een record, waardoor de bewerking werd afgebroken"
-"out: %s",""
 "An error occurred while loading the collection, aborting. Error: %s","Er deed zich een fout voor tijdens het laden van de collectie, waardoor de bewerking werd afgebroken. Fout: %s"
 "An error occurred while saving a record, aborting. Error: ","Er is een fout opgetreden bij het opslaan van een record, wordt geannuleerd. Error:"
 "Attempt to add an invalid object","Poging om een ongeldig object toe te voegen"
@@ -44,14 +43,15 @@
 "Attribute set with the ""%s"" name already exists.","Attribuutset met de naam ""%s"" bestaat al."
 "Attribute with the same code","Attribuut met dezelfde code"
 "Can't create table: %s","Kan tabel niet aanmaken: %s"
+"Can\'t create table: %s","Kan tabel niet aanmaken: %s","en_US_1.6.0","en_US_1.9.3.7"
 "Catalog Input Type for Store Owner","Catalogus invoertype voor winkeleigenaar"
 "Current module EAV entity is undefined","Huidige module EAV entiteit is ongedefinieerd"
 "Current module pathname is undefined","Huidige module padnaam is ongedefinieerd."
 "Data integrity: No header row found for attribute","Data-integriteit: Geen header-rij gevonden voor attribuut"
 "Date","Datum"
 "Decimal Number","Decimaal Nummer"
+"Default Product Listing Sort by does not exist in Available Product Listing Sort By.","Standaard product sortering komt niet voor niet in de beschikbare-product-sorteringen-lijst"
 "Default Product Listing Sort by not exists on Available Product Listing Sort By","Default Product Listing Sort by not exists on Available Product Listing Sort b"
-"tandaard ´Sorteren op´ in Productlijst bestaat niet in Beschikbare Productlijst Sortering",""
 "Default Value","Standaard waarde"
 "Default option value is not defined","Waarde van standaard-optie is niet gedefinieerd"
 "Delete","Verwijderen"
@@ -111,6 +111,7 @@
 "Text Area","Tekstvak"
 "Text Field","Tekstveld"
 "The attribute code '%s' is reserved by system. Please try another attribute code","The attribute code '%s' is reserved by system. Please try another attribute code"
+"The attribute code \'%s\' is reserved by system. Please try another attribute code","The attribute code \'%s\' is reserved by system. Please try another attribute code","en_US_1.6.0","en_US_1.7.0.2"
 "The value of attribute ""%s"" must be unique","The value of attribute ""%s"" must be unique"
 "The value of attribute ""%s"" must be unique.","De waarde van attribuut ""%s"" dient uniek te zijn."
 "This attribute is used in configurable products","This attribute is used in configurable products"
@@ -125,4 +126,5 @@
 "Wrong type definition for %s","Wrong type definition for %s"
 "Yes","Ja"
 "Yes/No","Ja/Nee"
-"Default Product Listing Sort by does not exist in Available Product Listing Sort By.","Standaard product sortering komt niet voor niet in de beschikbare-product-sorteringen-lijst"
+"out: %s",""
+"tandaard ´Sorteren op´ in Productlijst bestaat niet in Beschikbare Productlijst Sortering",""
