--- a/app/locale/nl_NL/Mage_GoogleAnalytics.csv
+++ b/app/locale/nl_NL/Mage_GoogleAnalytics.csv
@@ -1,5 +1,7 @@
 "Account Number","Account-nummer"
 "Enable","Inschakelen"
+"Enable IP anonymization","IP anonymization inschakelen"
 "Google API","Google API"
 "Google Analytics","Google Analytics"
-"Enable IP anonymization","IP anonymization inschakelen"
+"Type","Type","en_US_1.9.1","en_US_1.9.3.7"
+"Universal Analytics","Universal Analytics","en_US_1.9.1","en_US_1.9.3.7"
