--- a/app/locale/nl_NL/Mage_Newsletter.csv
+++ b/app/locale/nl_NL/Mage_Newsletter.csv
@@ -18,6 +18,7 @@
 "Customer","Klant"
 "Customer First Name","Voornaam klant"
 "Customer Last Name","Achternaam klant"
+"Customer Middle Name","Customer midden-naam","en_US_1.9.2.0","en_US_1.9.3.7"
 "Customer My Account Newsletter Subscriptions","Klant > Mijn account > Nieuwsbrief inschrijvingen"
 "Date Added","Datum toegevoegd"
 "Date Updated","Datum bijgewerkt"
@@ -94,8 +95,9 @@
 "Sender Name","Naam afzender"
 "Sending","Bezig met verzenden"
 "Sent","Verzonden"
-"Sign Up for Our Newsletter:","Abonneer u op onze nieuwsbrief"
-"Sign Up for Our Newsletter","Meld u aan voor onze nieuwsbrief"
+"Sign Up for Our Newsletter","Abonneer u op onze nieuwsbrief"
+"Sign Up for Our Newsletter:","Abonneer u op onze nieuwsbrief:"
+"Sign up for our newsletter","Abonneer u op onze nieuwsbrief","en_US_1.4.0","en_US_1.9.3.7"
 "Sorry, but administrator denied subscription for guests. Please <a href=""%s"">register</a>.","Helaas, inschrijving is uitsluitend voor behouden voor geregistreerde klanten. <a href=""%s"">Registreer</a> u om uzelf in te schrijven."
 "Start","Start"
 "Status","Status"
