--- a/app/locale/nl_NL/Mage_Payment.csv
+++ b/app/locale/nl_NL/Mage_Payment.csv
@@ -1,4 +1,5 @@
 "%s %s cycle.","%s %s cyclus"
+"* Required Fields","* Verplichte velden","en_US_1.9.1","en_US_1.9.3.7"
 "--Please Select--","--Selecteer a.u.b.--"
 "3D Secure Card Validation","3D Secure Card Validatie"
 "3D Secure Credit Card Validation","3D Secure Credit Card Validatie"
@@ -27,7 +28,9 @@
 "Centinel API URL","Centinel API URL"
 "Check / Money Order","Cheque / Betaalopdracht"
 "Credit Card Number","Creditcard-nummer"
+"Credit Card Number: xxxx-%s","Creditcard-nummer: xxxx-%s"
 "Credit Card Type","Creditcard-maatschappij"
+"Credit Card Type: %s","Creditcard type: %s"
 "Credit Card Types","Creditcard-maatschappij"
 "Credit card number mismatch with credit card type.","Credit card number mismatch with credit card type."
 "Credit card type is not allowed for this payment method.","Credit card type is not allowed for this payment method."
@@ -38,6 +41,7 @@
 "Debug Mode","Debug modus"
 "Enabled","Ingeschakeld"
 "Expiration Date","Vervaldatum"
+"Expiration Date: %s/%s","Verloopdatum: %s/%s"
 "Full name of the person receiving the product or service paid for by the recurring payment.","Volledige naam van de persoon die het product of de dienst zal ontvangen met het abonnement"
 "Incorrect credit card expiration date.","Onjuiste vervaldatum van creditcard."
 "Initial Fee","Aanbetaling"
@@ -59,11 +63,13 @@
 "N/A","N/B"
 "Name on Card","Naam op kaart"
 "Name on the Card","Naam op de kaart"
+"Name on the Card: %s","Naam op de kaart: %s"
 "New Order Status","Status nieuwe bestelling"
 "Number of billing periods that make up one billing cycle.","Aantal incasso-perioden die één incasso-cyclus opmaken"
 "Order action is not available.","Bestel-actie is niet beschikbaar"
 "Overrides API URL that may be specified by a payment method.","Overruled API URL die wellicht al is opgegeven bij het instellen van de betaalmethode."
 "Password","Wachtwoord"
+"Payment ID: %s","Betaal ID: %s"
 "Payment Method","Betaalmethode"
 "Payment Methods","Betaalmethodes"
 "Payment Methods Section","Sectie Betaalmethodes"
@@ -73,8 +79,7 @@
 "Payment from Specific Countries","Betaling van specifieke landen."
 "Payment method code is not set.","Betaalmethode is niet ingesteld"
 "Payment method code is undefined.","Betaalmethode is niet gedefinieerd"
-"Payment profile is invalid:n%s","Betaalprofiel is niet geldig:
-%s"
+"Payment profile is invalid:\n%s","Betaalprofiel is niet geldig:\n%s","en_US_1.4.2","en_US_1.9.3.7"
 "Period frequency is wrong.","Betaalfrequentie is incorrect"
 "Please enter a valid credit card verification number.","Geef a.u.b. een geldig credit card verificatie nummer op."
 "Processor ID","Processor-ID"
@@ -135,8 +140,3 @@
 "Wrong or empty billing amount specified.","Verkeerd of geen orderwaarde opgegeven"
 "Year","Jaar"
 "Zero Subtotal Checkout","Nul subtotaal afrekenen"
-"Credit Card Number: xxxx-%s","Creditcard-nummer: xxxx-%s"
-"Credit Card Type: %s","Creditcard type: %s"
-"Expiration Date: %s/%s","Verloopdatum: %s/%s"
-"Name on the Card: %s","Naam op de kaart: %s"
-"Payment ID: %s","Betaal ID: %s"
