--- a/app/locale/nl_NL/Mage_Reports.csv
+++ b/app/locale/nl_NL/Mage_Reports.csv
@@ -43,10 +43,12 @@
 "Downloads","Downloads"
 "Email","E-mail"
 "Empty Rows","Toon lege regels"
+"Enable Reports","Enable Reports","en_US_1.9.2.0","en_US_1.9.3.7"
 "Excel XML","Excel XML"
 "Filter","Filteren"
 "First Name","Voornaam"
 "From","Van"
+"General","General","en_US_1.9.2.0","en_US_1.9.3.7"
 "Guest","Gast"
 "Hits","Hits"
 "ID","Id"
