--- a/app/locale/nl_NL/Mage_SalesRule.csv
+++ b/app/locale/nl_NL/Mage_SalesRule.csv
@@ -120,6 +120,7 @@
 "Update prices using the following information","Prijzen bijwerken door de volgende gegevens te gebruiken"
 "Update product's %s %s: %s","Product's %s %s: %s bijwerken"
 "Update the Product","Het product bijwerken"
+"Usage limit enforced for logged in customers only","Usage limit enforced for logged in customers only","en_US_1.9.1","en_US_1.9.3.7"
 "Use Auto Generation","Gebruik auto-aanmaken"
 "Used","Gebruikt"
 "Uses per Coupon","Totale aantal beschikbaar"
