--- a/app/locale/nl_NL/Mage_Tax.csv
+++ b/app/locale/nl_NL/Mage_Tax.csv
@@ -19,9 +19,11 @@
 "Back","Terug"
 "Before Discount","Voorafgaand aan korting"
 "CSV","CSV"
+"Calculate off subtotal only","Bereken alleen a.h.v. subtotaal"
 "Calculation Settings","BTW berekeningsmethodiek"
 "Catalog Prices","Catalogusprijzen"
 "Class Name","Naam tariefgroep"
+"Click here to go to <a href=""%s"">Tax configuration</a> and change your settings.","Ga naar <a href=""%s"">BTW-configuratie</a> om uw instellingen aan te passen"
 "Code","Interne naam"
 "Country","Land"
 "Custom price if available","Aangepaste prijs als deze beschikbaar is"
@@ -46,6 +48,7 @@
 "Edit Class '%s'","Bewerken van tariefgroep ‘%s’"
 "Edit Rule","Regel bewerken"
 "Edit Tax Rate","Bewerk BTW-tarief"
+"Enable Cross Border Trade","Enable Cross Border Trade","en_US_1.9.1","en_US_1.9.3.7"
 "Excel XML","Excel XML"
 "Excl. Tax","Excl. BTW"
 "Excl. Tax:","Excl. BTW:"
@@ -57,6 +60,7 @@
 "Grand Total (Incl.Tax)","Totaal (incl. BTW)"
 "Grand Total Excl. Tax","Totaal (excl. BTW)"
 "Grand Total Incl. Tax","Totaal (incl. BTW)"
+"Ignore this notification","Deze notificatie negeren"
 "Import / Export Tax Rates","BTW-tarieven in- en exporteren"
 "Import Tax Rates","BTW-groepen importeren"
 "Inc. Tax","Incl. BTW"
@@ -72,6 +76,7 @@
 "Manage Tax Rates","Beheer BTW-tarieven"
 "Manage Tax Rules","Beheer BTW-regels"
 "Manage Tax Zones & Rates","Beheer belastingzones & tarieven"
+"Maximum zip code length is 9.","Maximale lengte voor de postcode is 9"
 "Name","Naam"
 "New Class","Nieuwe BTW-groep"
 "New Rule","Nieuwe regel"
@@ -81,6 +86,8 @@
 "One of the country has invalid code.","Eén van de landen heeft een ongeldige code"
 "Orders, Invoices, Credit Memos Display Settings","Instellingen vertoning voor bestellingen, facturen, creditfacturen"
 "Original price only","Alleen oorspronkelijke prijs"
+"Please fill all required fields with valid information.","Vul alle verplichte velden juist in a.u.b."
+"Please see <a href=""%s"">source</a> for more details.","Bekijk de <a href=""%s"">bron</a> voor meer details."
 "Price Display Settings","Prijsweergave instellingen"
 "Priority","Prioriteit"
 "Product Tax Class","BTW-tariefgroep product"
@@ -88,8 +95,10 @@
 "Product Tax Classes","BTW-groepen product"
 "Range From","Van"
 "Range To","Tot"
+"Range To should be equal or greater than Range From.","""Bereik tot"" moet gelijk zijn of groter dan ""Bereik van"""
 "Rate","Tarief"
 "Rate Percent","Percentage"
+"Rate Percent should be a positive number.","Percentage moet een positief nummer zijn"
 "Reset","Herstellen"
 "Row Total","Rijtotaal"
 "Sales","Verkopen"
@@ -113,6 +122,7 @@
 "Subtotal (Excl.Tax)","Subtotaal (excl. BTW)"
 "Subtotal (Incl. Tax)","Subtotaal (incl. BTW)"
 "Subtotal (Incl.Tax)","Subtotaal (incl. BTW)"
+"Subtotal only","Enkel subtotaal"
 "Tax","BTW"
 "Tax Calculation Based On","BTW berekening op basis van"
 "Tax Calculation Method Based On","BTW berekeningsmethodiek o.b.v"
@@ -139,25 +149,17 @@
 "This rule no longer exists.","Deze regel bestaat niet meer"
 "Total","Totaal"
 "Unit Price","Stuksprijs"
+"Warning tax configuration can result in rounding errors","Waarschuwing: BTW-configuratie kan in afrondfouten resulteren"
+"Warning tax configuration can result in unexpected FPT prices on applicable devices","Waarschuwing: BTW-configuratie kan resulteren in een onverwachte FPT prijzen op toepasselijke devices"
+"Warning tax discount configuration might result in different discounts than a customer might expect","Waarschuwing: BTW korting configuratie kan resulteren in andere kortingen dan een klant zou verwachten."
+"When catalog price includes tax, enable this setting will fix the price no matter what the customer's tax rate is.","When catalog price includes tax, enable this setting will fix the price no matter what the customer's tax rate is.","en_US_1.9.1","en_US_1.9.3.7"
 "Whether catalog prices entered by admin include tax.","Geef aan of de catalogusprijzen door de beheerder inclusief BTW worden ingevoerd."
 "Whether shipping amounts entered by admin or obtained from gateways include tax.","Geef aan of de verzendkosten door de beheerder inclusief BTW worden ingevoerd."
 "Yes","Ja"
 "You cannot delete this tax class as it is used for %d customer groups.","U kunt deze tariefgroep niet verwijderen omdat hij nog gebruikt wordt bij %d klantgroepen."
 "You cannot delete this tax class as it is used for %d products.","U kunt deze tariefgroep niet verwijderen omdat hij nog gebruikt wordt voor %d producten."
 "You cannot delete this tax class as it is used in Tax Rules. You have to delete the rules it is used in first.","U kunt deze tariefgroep niet verwijderen omdat hij nog gebruikt wordt in BTW-regels. U moet eerst de regels verwijderen waarin hij wordt gebruikt."
+"Zip code should not contain characters other than digits.","Postcode mag niets anders bevatten dan cijfers"
 "Zip/Post Code","Postcode"
 "Zip/Post is Range","Postcodereeks"
-"Calculate off subtotal only","Bereken alleen a.h.v. subtotaal"
-"Click here to go to <a href=""%s"">Tax configuration</a> and change your settings.","Ga naar <a href=""%s"">BTW-configuratie</a> om uw instellingen aan te passen"
-"Ignore this notification","Deze notificatie negeren"
-"Maximum zip code length is 9.","Maximale lengte voor de postcode is 9"
-"Please fill all required fields with valid information.","Vul alle verplichte velden juist in a.u.b."
-"Please see <a href=""%s"">source</a> for more details.","Bekijk de <a href=""%s"">bron</a> voor meer details."
-"Range To should be equal or greater than Range From.","""Bereik tot"" moet gelijk zijn of groter dan ""Bereik van"""
-"Rate Percent should be a positive number.","Percentage moet een positief nummer zijn"
-"Subtotal only","Enkel subtotaal"
-"Warning tax configuration can result in rounding errors","Waarschuwing: BTW-configuratie kan in afrondfouten resulteren"
-"Warning tax discount configuration might result in different discounts than a customer might expect","Waarschuwing: BTW korting configuratie kan resulteren in andere kortingen dan een klant zou verwachten."
-"Zip code should not contain characters other than digits.","Postcode mag niets anders bevatten dan cijfers"
 "for store(s)","voor winkel(s)"
-"Warning tax configuration can result in unexpected FPT prices on applicable devices","Waarschuwing: BTW-configuratie kan resulteren in een onverwachte FPT prijzen op toepasselijke devices"
