--- a/app/locale/nl_NL/Mage_Widget.csv
+++ b/app/locale/nl_NL/Mage_Widget.csv
@@ -6,6 +6,7 @@
 "All","Alles"
 "All Pages","Alle paginas"
 "All Product Types","Alle product types"
+"An error occurred during saving a widget: %s","Er is een fout opgetreden tijden het opslaan van een widget: %s"
 "Anchor Categories","Verankerde Categorieen"
 "Apply","Toepassen"
 "Assign to Store Views","Koppel aan Storeviews"
@@ -19,9 +20,12 @@
 "Default Template","Standaard sjabloon"
 "Delete","Verwijderen"
 "Design Package/Theme","Ontwerp Pakket/Thema"
+"Error occurs during loading chooser.","Error occurs during loading chooser.","en_US_1.9.2.0","en_US_1.9.3.7"
 "Export to:","Exporteer naar:"
 "Frontend Properties","Frontend eigenschappen"
 "Generic Pages","Generieke paginas"
+"Go to Next page","Ga naar de volgende pagina","en_US_1.9.2.0","en_US_1.9.3.7"
+"Go to Previous page","Ga naar de vorige pagina","en_US_1.9.2.0","en_US_1.9.3.7"
 "Images","Afbeeldingen"
 "Insert Widget","Widget invoegen"
 "Insert Widget...","Widget invoegen..."
@@ -72,4 +76,3 @@
 "items selected","items geselecteerd"
 "of %s pages","van %s pagina's"
 "per page","per pagina"
-"An error occurred during saving a widget: %s","Er is een fout opgetreden tijden het opslaan van een widget: %s"
