--- a/app/locale/nl_NL/Mage_CatalogSearch.csv
+++ b/app/locale/nl_NL/Mage_CatalogSearch.csv
@@ -11,6 +11,7 @@
 "Catalog Advanced Search","Catalogus geavanceerd zoeken"
 "Catalog Search","Catalogus doorzoeken"
 "Catalog Search Index","Catalogus zoekindex"
+"Did you mean:","Bedoelt u soms:"
 "Don't see what you're looking for?","Niet gevonden wat u zocht?"
 "Enter ""0"" to enable layered navigation for any number of results.","Voer ""0"" in om gelaagde navigatie voor alle zoekresultaten te activeren."
 "Go","Ga"
@@ -31,8 +32,10 @@
 "Popular Search Terms","Populaire zoekwoorden"
 "Quick Search Form","Zoeken > Formulier"
 "Rebuild Catalog product fulltext search index","Product 'fulltext' zoekindex"
+"Related search terms:","Gerelateerde zoektermen:"
 "Relevance","Relevantie"
 "Results","Resultaten"
+"Search","Zoeken"
 "Search Settings","Zoekinstellingen"
 "Search Terms","Zoektermen"
 "Search Type","Zoektype"
@@ -40,14 +43,12 @@
 "Search results for '%s'","Zoekresultaten voor ‘%s’"
 "Search results for: '%s'","Zoekresultaten voor ‘%s’"
 "Search:","Zoek:"
-"Search","Zoeken"
+"Show %s more results","Toon overige %s resultaten"
+"Show Autocomplete Results Count","Show Autocomplete Results Count","en_US_1.9.2.0","en_US_1.9.3.7"
+"Show more results","Toon meer resultaten"
 "Specified date is invalid.","Opgegeven datum is ongeldig."
 "Subscribe to Feed","Abonneren op Feed"
 "There are no search terms available.","Er zijn momenteel geen populaire trefwoorden beschikbaar."
 "Yes","Ja"
 "Your search returns no results.","Uw zoekactie had geen resultaat"
 "up to %s","tot %s"
-"Did you mean:","Bedoelt u soms:"
-"Related search terms:","Gerelateerde zoektermen:"
-"Show %s more results","Toon overige %s resultaten"
-"Show more results","Toon meer resultaten"
