--- a/app/locale/nl_NL/Mage_Customer.csv
+++ b/app/locale/nl_NL/Mage_Customer.csv
@@ -1,3 +1,4 @@
+" or ","of"
 "'%value%' appears to be a DNS hostname but cannot extract TLD part","'%value%' lijkt een DNS-hostname te zijn, maar kan TLD extraheren."
 "'%value%' appears to be a DNS hostname but cannot match TLD against known list","'%value%' lijkt een DNS-hostname te zijn, maar TLD kan niet gevonden worden in de lijst met bekende TLD's."
 "'%value%' appears to be a DNS hostname but cannot match against hostname schema for TLD '%tld%'","'%value%' lijkt een DNS-hostname te zijn, maar matcht niet met hostname schema voor TLD '%tld%'"
@@ -50,6 +51,9 @@
 "Based on the VAT ID, the customer would belong to the Customer Group %s.","Gebaseerd op het BTW-nummer, zou de klant tot klantgroep %s behoren."
 "Bill to Name","Factuurnaam"
 "Bought From","Gekocht in"
+"By Email","Per e-mail","en_US_1.9.3.0","en_US_1.9.3.7"
+"By IP","Per IP","en_US_1.9.3.0","en_US_1.9.3.7"
+"By IP and Email","Per IP en e-mail","en_US_1.9.3.0","en_US_1.9.3.7"
 "By creating an account with our store, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more.","Door een account aan te maken in deze winkel kunt u het betalingsproces sneller doorlopen, meerdere verzendadressen opslaan, bestellingen bekijken en volgen en meer."
 "CSV","CSV"
 "Cancel","Annuleren"
@@ -57,10 +61,13 @@
 "Cannot save address.","Kan het adres niet opslaan"
 "Cannot save the customer.","Kan de klant niet opslaan"
 "Cannot share customer accounts globally because some customer accounts with the same emails exist on multiple websites and cannot be merged.","Kan geen accounts globaal delen. Sommige accounts zijn op meerdere websites aangemeld en kunnen niet samengevoegd worden."
+"Change Account Data","Change Account Data","en_US_1.9.3.0","en_US_1.9.3.7"
 "Change Account Password","Account wachtwoord wijzigen"
 "Change Billing Address","Wijzigen"
 "Change Password","Wachtwoord wijzigen"
 "Change Shipping Address","Wijzigen"
+"Changed Email or Password Email Template","Changed Email or Password Email Template","en_US_1.9.3.0","en_US_1.9.3.7"
+"Changed Password or Email","Changed Password or Email","en_US_1.9.3.0","en_US_1.9.3.7"
 "City","Plaats"
 "Company","Bedrijf"
 "Config","Config"
@@ -79,6 +86,7 @@
 "Create an Account","Account aanmaken"
 "Create customer","Klant aanmaken"
 "Create customer address","Klantadres aanmaken"
+"Current Admin Password","Current Admin Password","en_US_1.9.1","en_US_1.9.3.7"
 "Current Password","Huidig wachtwoord"
 "Customer","Klant"
 "Customer API","Klant-API"
@@ -139,6 +147,7 @@
 "Edit Group","Groep bewerken"
 "Edit Newsletters","Nieuwsbrieven bewerken"
 "Edit Subscriptions","Wijzig abonnementen"
+"Edit address","Adres bewerken","en_US_1.9.2.0","en_US_1.9.3.7"
 "Email","E-mail"
 "Email Address","E-mailadres"
 "Email Sender","E-mail afzender"
@@ -154,6 +163,9 @@
 "Forgot Your Password","Uw wachtwoord vergeten"
 "Forgot Your Password?","Uw wachtwoord vergeten?"
 "Forgot and Remind Email Sender","Verzend e-mail adres voor vergeten- en herinnerings-e-mails."
+"Forgot password flow secure","Forgot password flow secure","en_US_1.9.3.0","en_US_1.9.3.7"
+"Forgot password requests to times per 24 hours from 1 e-mail","Forgot password requests to times per 24 hours from 1 e-mail","en_US_1.9.3.0","en_US_1.9.3.7"
+"Forgot password requests to times per hour from 1 IP","Forgot password requests to times per hour from 1 IP","en_US_1.9.3.0","en_US_1.9.3.7"
 "Form Fields Before","Voor formulier velden"
 "From your My Account Dashboard you have the ability to view a snapshot of your recent account activity and update your account information. Select a link below to view or edit information.","Uw persoonlijke pagina biedt u een overzicht van uw meest recente activiteiten. U kunt o.a. bestellingen inzien en accountgegevens bijwerken. Klik hieronder op een link om aan de slag te gaan!"
 "Gender","Geslacht"
@@ -209,7 +221,8 @@
 "Manage Addresses","Beheer adressen"
 "Manage Customers","Beheer klanten"
 "Maximum length must be less then %s symbols","Maximale lengte moet minder zijn dan  %s tekens."
-"Middle Name/Initial","Tussenvoegsel"
+"Middle Name","Midden-naam","en_US_1.9.2.0","en_US_1.9.3.7"
+"Middle Name/Initial","Midden-naam/initiaal"
 "Missing email, skipping the record, line: %s","E-mailadres ontbreekt, record wordt overgeslagen, regel %s"
 "Missing email, skipping the record.","E-mailadres ontbreekt. Record wordt overgeslagen."
 "Missing first name, skipping the record, line: %s","Voornaam ontbreekt, record wordt overgeslagen, regel %s"
@@ -272,6 +285,7 @@
 "Per Website","Per website"
 "Personal Information","Persoonlijke gegevens"
 "Please enter a number 1 or greater in this field.","Vul een nummer van 1 of groter in in dit veld."
+"Please enter a password with at most %s characters.","Please enter a password with at most %s characters.","en_US_1.9.3.7","en_US_1.9.3.7"
 "Please enter a valid date between %s and %s at %s.","Vul een geldige datum in tussen %s en %s bij %s."
 "Please enter a valid date equal to or greater than %s at %s.","Vul een geldige datum gelijk aan of groter dan %s bij %s."
 "Please enter a valid date less than or equal to %s at %s.","Vul een geldige datum in minder of gelijk aan %s bij %s."
@@ -285,6 +299,7 @@
 "Please enter the zip/postal code.","Vul a.u.b. de postcode in."
 "Please enter your email address below. You will receive a link to reset your password.","Vul uw e-mailadres hieronder in en wij sturen u een link op om uw wachtwoord te resetten."
 "Please enter your email below and we'll send you confirmation link for it.","Vul uw e-mailadres hieronder in en wij sturen u een bevestigingslink op."
+"Please enter your email below and we\'ll send you confirmation link for it.","Vul uw e-mailadres hieronder in en wij sturen u een bevestigingslink op.","en_US_1.4.0","en_US_1.9.3.7"
 "Please enter your email.","Vul uw e-mailadres in a.u.b."
 "Please make sure your passwords match.","Zorg er voor dat de wachtwoorden overeenkomen"
 "Please select","Selecteer a.u.b."
@@ -300,17 +315,22 @@
 "Product Tags","Eigen tags"
 "Purchase On","Aankoop op"
 "Purchased At","Gekocht bij"
+"Purchased On","Gekocht op"
 "Qty","Aantal"
 "Recent Orders","Recente orders"
 "Records for %s store found.","Records gevonden voor winkel %s"
-"Recovery Link Expiration Period (days)","Wachtwoord-herstellink-verloop-periode"
+"Recovery Link Expiration Period (days)","Wachtwoord-herstellink-verloop-periode (uur)"
+"Recovery Link Expiration Period (hours)","Wachtwoord-herstellink-verloop-periode (dagen)","en_US_1.9.3.0","en_US_1.9.3.7"
 "Redirect Customer to Account Dashboard after Logging in","Redirect klant naar Accountpagina na inloggen"
 "Refunded","Terugbetaald"
+"Register","Register","en_US_1.9.1","en_US_1.9.3.7"
 "Registered Customers","Geregistreerde klanten"
 "Remind Email Template","Email Template herinnering-e-mail"
 "Remind Password","Herinner wachtwoord"
 "Remove","Verwijderen"
+"Remove address","Adres verwijderen","en_US_1.9.2.0","en_US_1.9.3.7"
 "Require Emails Confirmation","E-mailbevestiging verplichten"
+"Require admin user to change user password","Require admin user to change user password","en_US_1.9.1","en_US_1.9.3.7"
 "Reset a Password","Reset wachtwoord"
 "Retrieve address data","Adresgegevens ophalen"
 "Retrieve address info","Adresgegevens ophalen"
@@ -331,6 +351,7 @@
 "Save and Continue Edit","Opslaan en verder bewerken"
 "Saved %d record(s)","%d record(s) opgeslagen"
 "Semicolon (;) separated values.<br/>Put semicolon in the beginning for empty first option.<br/>Leave empty for open text field.","Waarden scheiden met puntkomma (;) <br/>Zet een puntkomma aan het begin voor een lege eerste optie.<br/> Niets invullen voor een leeg tekstveld."
+"Send Auto-Generated Password","Stuur automatisch gegenereerd wachtwoord"
 "Send From","Verstuurd via"
 "Send Welcome Email","Welkomstbericht mailen"
 "Send Welcome Email after Confirmation","Welkomstbericht mailen na bevestiging"
@@ -350,7 +371,7 @@
 "Shopping Cart of %1$s - %2$d item(s)","Winkelwagen met %1$s - %2$d product(en)"
 "Show Date of Birth","Geboortedatum tonen"
 "Show Gender","Geslacht tonen"
-"Show Middle Name (initial)","Midden-initiaal tonen"
+"Show Middle Name (initial)","Midden-naam/initiaal tonen"
 "Show Prefix","Voorvoegsel tonen"
 "Show Suffix","Achtervoegsel tonen"
 "Show Tax/VAT Number","BTW-nummer tonen"
@@ -372,8 +393,8 @@
 "Tag Name","Tag-naam"
 "Tax Calculation Based On","BTW berekening op basis van"
 "Tax Class","BTW-groep"
-"Tax/VAT number","BTW-nummer"
 "Tax/VAT Number","BTW-nummer"
+"Tax/VAT number","BTW-nummer"
 "Telephone","Telefoonnummer"
 "Text","Tekst"
 "Text One Line","Tekst op"
@@ -401,8 +422,9 @@
 "The password must have at least 6 characters. Leading or trailing spaces will be ignored.","Het wachtwoord moet tenminste 6 tekens bevatten. Spaties worden genegeerd."
 "The suffix that goes after name (Jr., Sr., etc.)","De afkorting die achter de naam staat (Jr., Sr., etc.)"
 "The title that goes before name (Mr., Mrs., etc.)","De aanhef die voor de naam staat (heer, mevrouw, etc.)"
-"There are no items in customer's wishlist at the moment","Er staan momenteel geen artikelen op de verlanglijst van de klant"
 "There are no items in customer's shopping cart at the moment","Er zitten geen producten in de klant's winkelwagen op dit moment."
+"There are no items in customer's wishlist at the moment","Er staan momenteel geen artikelen op de verlanglijst van de klant"
+"There are no items in customer\'s shopping cart at the moment","Er zitten geen producten in de klant's winkelwagen op dit moment.","en_US_1.4.0","en_US_1.9.3.7"
 "There is already an account with this email address. If you are sure that it is your email address, <a href=""%s"">click here</a> to get your password and access your account.","Er bestaat al een registratie met dit e-mailadres. Is dit uw e-mailadres, <a href=""%s"">klik dan hier</a> om uw wachtwoord toegestuurd te krijgen."
 "There was an error validating the VAT ID.","Er is een fout opgetreden bij het valideren van het BTW-nummer."
 "There was an error validating the VAT ID. The customer would belong to Customer Group %s.","Er is een fout opgetreden bij het valideren van het BTW-nummer. De klant zou bij klantgroep %s behoren."
@@ -417,6 +439,7 @@
 "To show VAT number on frontend, set Show VAT Number on Frontend option to Yes.","Om het BTW-nummer te tonen op de frontend, zet Toon BTW-nummer op frontend op ja"
 "Total","Totaal"
 "Type","Soort"
+"Unable to save the customer.","Niet mogelijk om de klant op te slaan"
 "Unknown","Onbekend"
 "Unsubscribe from Newsletter","Uitschrijven nieuwsbrief"
 "Update","Bijwerken"
@@ -453,6 +476,8 @@
 "You are currently subscribed to 'General Subscription'.","Momenteel bent u geabonneerd op het Algemene Abonnement."
 "You are currently subscribed to our newsletter.","U bent momenteel geabonneerd op onze nieuwsbrief."
 "You are now logged out","U bent nu afgemeld."
+"You have exceeded requests to times per 24 hours from 1 e-mail.","You have exceeded requests to times per 24 hours from 1 e-mail.","en_US_1.9.3.0","en_US_1.9.3.7"
+"You have exceeded requests to times per hour from 1 IP.","You have exceeded requests to times per hour from 1 IP.","en_US_1.9.3.0","en_US_1.9.3.7"
 "You have logged out and will be redirected to our homepage in 5 seconds.","U bent nu afgemeld en zult binnen 5 seconden naar onze homepagina doorgestuurd worden."
 "You have no additional address entries in your address book.","U heeft geen extra adressen in uw adresboek."
 "You have no additional entries in your address book.","U heeft geen extra adressen in uw adresboek."
@@ -475,8 +500,4 @@
 "Zip/Postal Code","Postcode"
 "n/a","n.v.t."
 "or","of"
-"Purchased On","Gekocht op"
-"Send Auto-Generated Password","Stuur automatisch gegenereerd wachtwoord"
-" or ","of"
-"Unable to save the customer.","Niet mogelijk om de klant op te slaan"
 "register","Registreer"
