--- a/app/locale/nl_NL/Mage_ImportExport.csv
+++ b/app/locale/nl_NL/Mage_ImportExport.csv
@@ -1,68 +1,9 @@
 " in rows: "," in rijen:"
+"%s file does not exists or is not readable","%s bestand bestaat niet of is niet leesbaar"
 "-- Please Select --","-- Selecteer a.u.b. --"
 "Adapter must be an instance of Mage_ImportExport_Model_Import_Adapter_Abstract","Adapter moet een isntantie zijn van Mage_ImportExport_Model_Import_Adapter_Abstract"
-"Adapter type must be a non empty string","Adapter-type mag geen lege string zijn"
-"Can not determine attribute filter type","Kan attribuut-filter-type niet bepalen"
-"Can not find required columns: ","Kan verplichte kolommen niet vinden:"
-"Can not get autoincrement value","Kan auto-increment waarde niet ophalen"
-"Check Data","Controleer data"
-"Column names have duplicates","Kolomnamen bevatten duplicaten"
-"Column names is empty or is not an array","Kolomnamen zijn leeg of is geen array"
-"Column names: ""%s"" are invalid","Kolomnamen: ""%s"" zijn ongeldig"
-"Continue","Ga verder"
-"Data is invalid or file is not uploaded","Data is ongeldig of bestand is niet geupload"
-"Destination directory is not writable","Doelmap is niet schrijfbaar"
-"Destination file is not writable","Doelbestand is niet schrijfbaar"
-"Destination file path must be a string","Doelbestand-pad moet een string zijn"
-"Entity Attributes","Entity Attributen"
-"Entity adapter object must be an instance of Mage_ImportExport_Model_Import_Entity_Abstract","Entity adapter object moet een instance zijn van Mage_ImportExport_Model_Import_Entity_Abstract"
-"Entity is unknown","Entity is niet bekend"
-"Entity type model must be an instance of Mage_ImportExport_Model_Export_Entity_Product_Type_Abstract","Entity type model moet een instance zijn van Mage_ImportExport_Model_Export_Entity_Product_Type_Abstract"
-"Entity type model must be an instance of Mage_ImportExport_Model_Import_Entity_Product_Type_Abstract","Entity type model moet een instance zijn van Mage_ImportExport_Model_Import_Entity_Product_Type_Abstract"
-"Error in data structure: behaviors are mixed","Fout in data structuur: gedrag is verschillend"
-"Error in data structure: entity codes are mixed","Fout in data structuur: entiteit-codes zijn verschillend"
-"Export","Exporteer"
-"Export FAQ","Exporter FAQ"
-"FAQ","FAQ"
-"File does not contain data. Please upload another one","Bestand bevat geen data, upload nog een bestand"
-"File format is unknown","Bestandsformaat is niet bekend"
-"File is partially valid, but import is not possible","Bestand is gedeeltelijk geldig, maar import is niet mogelijk"
-"File is totally invalid. Please fix errors and re-upload file","Bestand is totaal ongeldig, repareer fouten en her-upload het bestand"
-"File is valid! To start import process press ""Import"" button","Bestand is geldig! Om het importproces te starten druk op de ""Importeren"" knop"
-"File is valid, but import is not possible","Bestand is geldig, maar importeren is niet mogelijk"
-"Header column names already set","Header-kolomnamen zijn al ingesteld"
-"Import","Importeren"
-"Import / Export FAQ (Frequently Asked Questions)","Importeren / Exporteren FAQ (Veelgestelde vragen)"
-"Import FAQ","Importeren FAQ (Veelgestelde vragen)"
-"Import successfully done.","Importeren succesvol afgerond"
-"Import/Export","Importeren/Exporteren"
-"In/Out","In/Uit"
-"Input entity code is not equal to entity adapter code","Input entity-code is niet gelijk aan entity-adapter-code"
-"Invalid entity","Ongeldige entity"
-"Invalid file format","Ongeldig bestandsformaat"
-"Invalid parameters","Ongeldige parameters"
-"Invalid seek position","Ongeldige zoek-positie"
-"Invalid value for '%s'","Ongeldige waarde voor '%s'"
-"No filter data provided","Geen filter-data geleverd"
-"No source specified","Geen bron gespecificeerd"
-"No valid data sent","Geel data verstuurd"
-"No writer specified","Geen 'writer' gespecificeerd"
-"Node does not has model token tag","Node heeft geen model-token-tag"
-"Not implemented yet","Nog niet geimplementeerd"
-"Please fix errors and re-upload file","Repareer fouten en her-upload bestanden"
-"Please fix errors and re-upload file or simply press ""Import"" button to skip rows with errors","Repareer fouten en her-upload bestanden of druk op ""Importeren"" om de rijen met fouten over te slaan"
-"Some other FAQ","Een andere FAQ"
-"Source file moving failed","Bronbestand verplaatsen mislukt"
-"Source file path must be a string","Bronbestand-pad moet een string zijn"
-"Source is not set","Bron is niet ingesteld"
-"Status","Status"
-"System busy","Systeem bezig"
-"There are no product types available for export","Er zijn geen product-typen beschikbaar om te exporteren"
-"Total size of uploadable files must not exceed %s","Totale grootte van geuploadde bestanden mag niet groter zijn dan %s"
-"Uploaded file has no extension","Geüpload bestand heeft geen extensie "
-"Validation Results","Validatieresultaten"
-"%s file does not exists or is not readable","%s bestand bestaat niet of is niet leesbaar"
 "Adapter object must be an instance of %s","Adapterobject moet een instance zijn van %s"
+"Adapter type must be a non empty string","Adapter-type mag geen lege string zijn"
 "Append Complex Data","Complexe data toevoegen"
 "Attribute Code","Attribuutcode"
 "Attribute Label","Attribuutlabel"
@@ -71,36 +12,100 @@
 "Begin export of %s","Start export van %s"
 "Begin import of ""%s"" with ""%s"" behavior","Start import van ""%s"", gedrag:""%s"""
 "CSV","CSV"
+"Can not determine attribute filter type","Kan attribuut-filter-type niet bepalen"
+"Can not find required columns: ","Kan verplichte kolommen niet vinden:"
 "Can not find required columns: %s","Kan de verplichte kolommen niet vinden: %s"
+"Can not get autoincrement value","Kan auto-increment waarde niet ophalen"
 "Cannot get autoincrement value","Kan geen autoincrement waarde ophalen"
+"Check Data","Controleer data"
 "Checked rows: %d, checked entities: %d, invalid rows: %d, total errors: %d","Rijen gecontroleerd: %s, gecontroleerde entiteiten: %s, ongeldige regels %s, totaal aantal fouten: %s"
+"Column names have duplicates","Kolomnamen bevatten duplicaten"
+"Column names is empty or is not an array","Kolomnamen zijn leeg of is geen array"
+"Column names: ""%s"" are invalid","Kolomnamen: ""%s"" zijn ongeldig"
+"Continue","Ga verder"
 "Customers","Klanten"
+"Data is invalid or file is not uploaded","Data is ongeldig of bestand is niet geupload"
 "Delete Entities","Verwijder entiteiten"
+"Destination directory is not writable","Doelmap is niet schrijfbaar"
+"Destination file is not writable","Doelbestand is niet schrijfbaar"
+"Destination file path must be a string","Doelbestand-pad moet een string zijn"
+"Disabling this setting can increase security risk.","Als u deze instelling uitschakelt, kan het beveiligingsrisico toenemen.","1.9.2.4+","1.9.3.7+"
 "Done import data validation","Klaar met importvalidatie"
 "Duplicate Unique Attribute for '%s'","Duplicate unieke waarden voor %s"
+"Entity Attributes","Entity Attributen"
 "Entity Type","Entiteit soort"
 "Entity adapter obejct must be an instance of Mage_ImportExport_Model_Export_Entity_Abstract","Entiteit adapter object moet een instance zijn van Mage_ImportExport_Model_Export_Entity_Abstract"
+"Entity adapter object must be an instance of Mage_ImportExport_Model_Import_Entity_Abstract","Entity adapter object moet een instance zijn van Mage_ImportExport_Model_Import_Entity_Abstract"
+"Entity is unknown","Entity is niet bekend"
+"Entity type model must be an instance of Mage_ImportExport_Model_Export_Entity_Product_Type_Abstract","Entity type model moet een instance zijn van Mage_ImportExport_Model_Export_Entity_Product_Type_Abstract"
+"Entity type model must be an instance of Mage_ImportExport_Model_Import_Entity_Product_Type_Abstract","Entity type model moet een instance zijn van Mage_ImportExport_Model_Import_Entity_Product_Type_Abstract"
+"Error in data structure: behaviors are mixed","Fout in data structuur: gedrag is verschillend"
+"Error in data structure: entity codes are mixed","Fout in data structuur: entiteit-codes zijn verschillend"
 "Errors limit (%d) reached. Please fix errors and re-upload file","Foutlimiet (%d) bereikt. Los fouten op en upload het bestand opnieuw"
+"Escape CSV fields","Escape CSV fields","en_US_1.9.2.4","en_US_1.9.3.7"
+"Export","Exporteer"
+"Export FAQ","Exporter FAQ"
 "Export File Format","Export bestandsformaat"
 "Export Settings","Export instellingen"
 "Export has been done.","Export is gereed"
 "Exported %s rows.","%s rijen geëxporteerd."
+"FAQ","FAQ"
 "File does not contain data.","Bestand bevat geen data"
+"File does not contain data. Please upload another one","Bestand bevat geen data, upload nog een bestand"
+"File format is unknown","Bestandsformaat is niet bekend"
+"File is partially valid, but import is not possible","Bestand is gedeeltelijk geldig, maar import is niet mogelijk"
+"File is totally invalid. Please fix errors and re-upload file","Bestand is totaal ongeldig, repareer fouten en her-upload het bestand"
+"File is valid! To start import process press ""Import"" button","Bestand is geldig! Om het importproces te starten druk op de ""Importeren"" knop"
+"File is valid, but import is not possible","Bestand is geldig, maar importeren is niet mogelijk"
 "File was not uploaded","Bestand is niet geupload"
 "Filter","Filter"
 "From","Van"
+"Header column names already set","Header-kolomnamen zijn al ingesteld"
+"Import","Importeren"
+"Import / Export FAQ (Frequently Asked Questions)","Importeren / Exporteren FAQ (Veelgestelde vragen)"
 "Import Behavior","Import gedrag"
+"Import CSV","Import CSV","en_US_1.9.3.0","en_US_1.9.3.7"
+"Import FAQ","Importeren FAQ (Veelgestelde vragen)"
 "Import Settings","Import instellingen"
 "Import has been done successfuly.","Import is voltooid"
+"Import successfully done.","Importeren succesvol afgerond"
+"Import/Export","Importeren/Exporteren"
+"In/Out","In/Uit"
+"Input entity code is not equal to entity adapter code","Input entity-code is niet gelijk aan entity-adapter-code"
+"Invalid entity","Ongeldige entity"
 "Invalid entity model","Ongeldige entiteit model"
+"Invalid file format","Ongeldig bestandsformaat"
+"Invalid parameters","Ongeldige parameters"
+"Invalid seek position","Ongeldige zoek-positie"
+"Invalid value for '%s'","Ongeldige waarde voor '%s'"
 "Invalid value for '%s' column","Ongeldige waarde voor kolom %s"
+"No filter data provided","Geen filter-data geleverd"
+"No source specified","Geen bron gespecificeerd"
+"No valid data sent","Geel data verstuurd"
+"No writer specified","Geen 'writer' gespecificeerd"
+"Node does not has model token tag","Node heeft geen model-token-tag"
+"Not implemented yet","Nog niet geimplementeerd"
+"Page size for import configurable products","Paginaformaat voor importconfigureerbare producten","1.9.3.0+","1.9.3.7+"
+"Please fix errors and re-upload file","Repareer fouten en her-upload bestanden"
+"Please fix errors and re-upload file or simply press ""Import"" button to skip rows with errors","Repareer fouten en her-upload bestanden of druk op ""Importeren"" om de rijen met fouten over te slaan"
 "Products","Producten"
 "Replace Existing Complex Data","Vervang bestaande complexe data"
 "Select File to Import","Selecteer bestanden om te importeren"
 "Skip","Overslaan"
+"Some other FAQ","Een andere FAQ"
+"Source file moving failed","Bronbestand verplaatsen mislukt"
+"Source file path must be a string","Bronbestand-pad moet een string zijn"
+"Source is not set","Bron is niet ingesteld"
+"Status","Status"
+"System busy","Systeem bezig"
+"There are no product types available for export","Er zijn geen product-typen beschikbaar om te exporteren"
 "There is no data for export","Er is geen data om te exporteren"
+"This option will be ignore if it set less than 1.","Deze optie wordt genegeerd als deze minder dan 1 instelt.","1.9.3.0+","1.9.3.7+"
 "To","Tot"
+"Total size of uploadable files must not exceed %s","Totale grootte van geuploadde bestanden mag niet groter zijn dan %s"
 "Unknown attribute filter type","Onbekend attribuut filter-type"
+"Uploaded file has no extension","Geüpload bestand heeft geen extensie "
+"Validation Results","Validatieresultaten"
 "Validation finished successfully","Validatie is succesvol afgerond"
 "in rows","in rijen"
 "in rows:","in rijen:"
