--- a/app/locale/nl_NL/Mage_Page.csv
+++ b/app/locale/nl_NL/Mage_Page.csv
@@ -1,5 +1,11 @@
 "%s Item(s)","%s artikel(en)"
+"%s-%s of %s","%s-%s van de %s","en_US_1.9.1","en_US_1.9.3.7"
 "&copy; 2012 Magento Demo Store. All Rights Reserved.","&copy; 2012 Magento Demo Store. Alle rechten voorbehouden."
+"&copy; 2013 Magento Demo Store. All Rights Reserved.","&copy; 2013 Magento Demo shop. Alle rechten voorbehouden"
+"&copy; 2014 Magento Demo Store. All Rights Reserved.","&copy; 2014 Magento Demo Store. All Rights Reserved.","en_US_1.9.1","en_US_1.9.1"
+"&copy; 2015 Magento Demo Store. All Rights Reserved.","&copy; 2015 Magento Demo Store. All Rights Reserved.","en_US_1.9.2.0","en_US_1.9.2.0"
+"&copy; 2016 Magento Demo Store. All Rights Reserved.","&copy; 2016 Magento Demo Store. All Rights Reserved.","en_US_1.9.2.4","en_US_1.9.3.0"
+"&copy; 2017 Magento Demo Store. All Rights Reserved.","&copy; 2017 Magento Demo Store. All Rights Reserved.","en_US_1.9.3.7","en_US_1.9.3.7"
 "(Shift-)Click or drag to change value","(Shift)klik of sleep om waarde te veranderen."
 "(ver. %s)","(versie %s)"
 "- Click on any of the time parts to increase it","- Klik op tijdknop om te verhogen"
@@ -14,6 +20,7 @@
 "2 columns with right bar","2 kolommen met rechter balk"
 "3 columns","3 kolommen"
 "About the calendar","Over de kalender"
+"Account","Account","en_US_1.9.1","en_US_1.9.3.7"
 "All Empty Layout Pages","Alle paginas met een lege lay-out"
 "All One-Column Layout Pages","Alle 1-kolom-paginas"
 "All Pages","Alle paginas"
@@ -23,6 +30,7 @@
 "All Two-Column Layout Pages (Right Column)","Alle 2-kolommen-paginas (rechterbalk)"
 "Allow","Toestaan"
 "Breadcrumbs","Breadcrumbs"
+"Call us:","Bel ons:"
 "Click <a href=""%s"">here</a> if nothing has happened","Klik <a href=""%s"">hier</a> als er niets gebeurrt"
 "Close","Sluiten"
 "Close Window","Sluit venster"
@@ -42,7 +50,9 @@
 "Items %s to %s of %s total","Artikelen %s tot %s van %s in totaal"
 "JavaScript seems to be disabled in your browser.","JavaScript lijkt te zijn uitgeschakeld in uw browser."
 "Left Column","Hoofd-inhoud > Linker kolom"
+"Left Column First (shows above main column on smaller screens)","Left Column First (shows above main column on smaller screens)","en_US_1.9.1","en_US_1.9.3.7"
 "Main Content Area","Hoofd-inhoud > Middelste kolom"
+"Menu","Menu","en_US_1.9.1","en_US_1.9.3.7"
 "Navigation Bar","Navigatiebalk"
 "Next","Volgende"
 "Next month (hold for menu)","Volgende maand (ingedrukt voor menu)"
@@ -57,7 +67,9 @@
 "Previous","Vorige"
 "Redirecting...","Bezig met doorverwijzen..."
 "Report All Bugs","Rapporteer alle bugs."
+"Results per page","Resultaten per pagina","en_US_1.9.1","en_US_1.9.3.7"
 "Right Column","Hoofd-inhoud > Rechter kolom"
+"Search","Zoeken","en_US_1.9.1","en_US_1.9.3.7"
 "Select Store","Selecteer winkel"
 "Select Store:","Selecteer winkel"
 "Select date","Selecteer datum"
@@ -66,11 +78,10 @@
 "This website requires cookies to provide all of its features. For more information on what data is contained in the cookies, please see our <a href=""%s"">Privacy Policy page</a>. To accept cookies from this site, please click the Allow button below.","Deze website vereist cookies om gebruik te maken alle functionaliteiten. Voor meer informatie over welke data er wordt opgeslagen in de cookies, bekijk onze <a href=""%s"">Privacy policy pagina</a>. Om cookies te accepteren, klik op de 'Toestaan' knop."
 "Time selection:","Selecteer tijd"
 "Time:","Tijd:"
+"View All","Bekijk alles","en_US_1.9.1","en_US_1.9.3.7"
 "View All ","Bekijk alles van "
 "Welcome, %s!","Welkom, %s!"
 "You must have JavaScript enabled in your browser to utilize the functionality of this website.","U moet JavaScript geactiveerd hebben om de volledige functionaliteit van deze website te kunnen benutten."
 "Your Language","Uw taal"
 "Your Language:","Uw taal:"
 "per page","per pagina"
-"Call us:","Bel ons:"
-"&copy; 2013 Magento Demo Store. All Rights Reserved.","&copy; 2013 Magento Demo shop. Alle rechten voorbehouden"
