--- a/app/locale/nl_NL/Mage_Review.csv
+++ b/app/locale/nl_NL/Mage_Review.csv
@@ -2,11 +2,17 @@
 "%s Review(s)","%s review(s)"
 "(Posted on %s)","(Geplaatst op %s)"
 "1 star","1 ster"
+"2 star","2 sterren","en_US_1.9.1","en_US_1.9.3.7"
 "2 stars","2 sterren"
+"3 star","3 sterren","en_US_1.9.1","en_US_1.9.3.7"
 "3 stars","3 sterren"
+"4 star","4 sterren","en_US_1.9.1","en_US_1.9.3.7"
 "4 stars","4 sterren"
+"5 star","5 sterren","en_US_1.9.1","en_US_1.9.3.7"
 "5 stars","5 sterren"
 "<a href=""%1$s"" onclick=""this.target='blank'"">%2$s %3$s</a> <a href=""mailto:%4$s"">(%4$s)</a>","<a href=""%1$s"" onclick=""this.target='blank'"">%2$s %3$s</a> <a href=""mailto:%4$s"">(%4$s)</a>"
+"<a href=""%1$s"" onclick=""this.target=\'blank\'"">%2$s %3$s</a> <a href=""mailto:%4$s"">(%4$s)</a>","<a href=""%1$s"" onclick=""this.target=\'blank\'"">%2$s %3$s</a> <a href=""mailto:%4$s"">(%4$s)</a>","en_US_1.7.0","en_US_1.9.3.7"
+"<a href=""%1$s"" onclick=""this.target=\'blank\'"">%2$s</a> <a href=""mailto:%3$s"">(%3$s)</a>","<a href=""%1$s"" onclick=""this.target=\'blank\'"">%2$s</a> <a href=""mailto:%3$s"">(%3$s)</a>","en_US_1.9.2.0","en_US_1.9.3.7"
 "Add New Review","Nieuwe review toevoegen"
 "Add Your Review","Schrijf een review"
 "Administrator","Administrator"
@@ -14,6 +20,7 @@
 "All Reviews of Customer `%s`","Alle reviews van klant `%s`"
 "All Reviews of Product `%s`","Alle reviews van product `%s`"
 "Allow Guests to Write Reviews","Reviews door gasten toestaan"
+"Approved","Akkoord"
 "Are you sure you want to do this?","Weet u zeker dat u dit wilt?"
 "Are you sure?","Weet u het zeker?"
 "Average Customer Rating","Gemiddelde klantwaardering"
@@ -47,7 +54,10 @@
 "New Review","Nieuwe reviews"
 "Nickname","Uw naam"
 "Nickname can't be empty","Nickname mag mag niet leeg zijn."
+"Nickname can\'t be empty","Nickname mag mag niet leeg zijn.","en_US_1.7.0","en_US_1.9.3.7"
+"Not Approved","Niet Akkoord"
 "Only registered users can write reviews. Please, <a href=""%s"">log in</a> or <a href=""%s"">register</a>","Alleen geregistreerde gebruikers kunnen een review plaatsen. U kunt, <a href=""%s"">inloggen</a> of <a href=""%s"">registreren</a>"
+"Pending","In afwachting"
 "Pending Reviews","Te modereren reviews"
 "Pending Reviews of Customer `%s`","Te modereren reviews van klant `%s`"
 "Please select a product","Selecteer een product aub"
@@ -68,9 +78,13 @@
 "Review (submitted on %s):","Review (verstuurd op %s):"
 "Review Details","Review details"
 "Review Form Fields Before","Reviewformulier-velden voor"
+"Review by %s","Review door %s","en_US_1.9.1","en_US_1.9.3.7"
 "Review by <span>%s</span>","Review door <span>%s</span>"
 "Review can't be empty","Review is verplicht"
+"Review can\'t be empty","Review is verplicht","en_US_1.7.0","en_US_1.9.3.7"
 "Review summary can't be empty","Review samenvatting is verplicht"
+"Review summary can\'t be empty","Review samenvatting is verplicht","en_US_1.7.0","en_US_1.9.3.7"
+"Reviews","Reviews","en_US_1.9.1","en_US_1.9.3.7"
 "Reviews and Ratings","Reviews & Waarderingen"
 "SKU","Artikelnummer"
 "Save Review","Review opslaan"
@@ -94,6 +108,3 @@
 "Your Rating:","Uw waardering:"
 "Your Review (submitted on %s):","Uw review (verstuurd op %s):"
 "Your review has been accepted for moderation.","Dank voor uw bijdrage. Uw review is geaccepteerd voor controle op taalgebruik."
-"Approved","Akkoord"
-"Not Approved","Niet Akkoord"
-"Pending","In afwachting"
