--- a/app/locale/nl_NL/Mage_Sales.csv
+++ b/app/locale/nl_NL/Mage_Sales.csv
@@ -10,6 +10,7 @@
 "%s order(s) were not released from holding status.","%s bestelling(en) zijn niet vrijgegeven"
 "* - Enter custom price excluding tax","* - Voer speciale prijs in exclusief BTW"
 "* - Enter custom price including tax","* - Voer speciale prijs in inclusief BTW"
+"* Required Fields","* Verplichte velden"
 "-- Please Select --","-- Maak een keuze --"
 "-- Please Select Billing Agreement--","-- Selecteer incasso-overeenkomst--"
 "About This Order:","Over deze bestelling:"
@@ -154,6 +155,7 @@
 "Create New Order for New Customer","Nieuwe bestelling voor nieuwe klant aanmaken"
 "Create New Order for New Customer in %s","Maak nieuwe bestelling aanmaken voor nieuwe klant in %s"
 "Create New Status","Nieuwe status aanmaken"
+"Create Order","Bestelling aanmaken"
 "Create Packages","Nieuw pakket aanmaken"
 "Create Shipment","Verzending aanmaken"
 "Create Shipping Label","Maak verzend-label aan"
@@ -189,6 +191,7 @@
 "Customer Email","Klant e-mail"
 "Customer Group","Klantgroep"
 "Customer Last Name","Klant achternaam"
+"Customer Middle Name","Customer midden-naam","en_US_1.9.2.0","en_US_1.9.3.7"
 "Customer My Account Order Creditmemo View","Klant > Mijn Account > Bestelling > Creditfactuur-bekijk"
 "Customer My Account Order History","Klant > Mijn Account > Bestelling > Geschiedenis"
 "Customer My Account Order Invoice View","Klant > Mijn Account > Bestelling > Factuur-bekijk"
@@ -196,6 +199,7 @@
 "Customer My Account Order View","Klant > Mijn Account > Bestelling > Bestelling-bekijk"
 "Customer Name","Klantnaam"
 "Customer's Current Activities","Klant's huidige activiteiten"
+"Customer\'s Current Activities","Klant's huidige activiteiten","en_US_1.4.0","en_US_1.9.3.7"
 "Customs Value","Custom-waarden"
 "Date","Datum"
 "Date Shipped","Verzonden op"
@@ -257,7 +261,9 @@
 "Gift Message for the Entire Order","Kadobericht voor hele bestelling"
 "Gift Message for this Order","Kadobericht voor deze bestelling"
 "Gift Options","Kado opties"
+"Gift Wrapping for the Entire Order","Cadeau verpakking voor de gehele bestelling"
 "Girth","Omtrek"
+"Go to Home Page","Ga naar homepagina"
 "Grand Total","Totaal"
 "Grand Total to be Charged","Te betalen eindtotaal"
 "Guest","Gast"
@@ -266,9 +272,11 @@
 "Hold","Vasthouden"
 "Hold action is not available.","Vasthouden is niet mogelijk."
 "Hold order","Bestelling vasthouden"
+"Home","Home"
 "ID","Id"
 "ID #","ID #"
 "IPN ""Refunded"". Refund issued by merchant. Registered notification about refunded amount of %s. Transaction ID: ""%s""","IPN ""Refunded"". Refund issued by merchant. Registered notification about refunded amount of %s. Transaction ID: ""%s"""
+"IPN ""Refunded"". Refund issued by merchant. Registered notification about refunded amount of %s. Transaction ID: ""%s"". Credit Memo has not been created. Please create offline Credit Memo.","IPN Terug betaald"". Terug betaling uitgevoerd door verkoper. Notificatie geregistreerd voor een bedrag van %s. Transactie ID: """"%s"""". Creditfactuur is niet aangemaakt. Maak een offline creditfactuur aan a.u.b."""
 "If empty, the default description above will be used.","Indien leeg, zal de standaard omschrijving gebruikt worden."
 "If empty, the default error above will be used.","Indien leeg, zal de standaard omschrijving gebruikt worden."
 "If the invoice was created offline, try creating an offline creditmemo.","Als de factuur handmatig is aangemaakt, probeer handmatige en een creditfactuur aan te maken."
@@ -288,6 +296,7 @@
 "Invalid qty to ship for item ""%s""","Ongeldig aantal voor verzenden van artikel ""%s"""
 "Invalid renderer model","Ongeldig 'renderer model'"
 "Invalid request for adding product to quote.","Ongeldig verzoek om product aan offerte toe te voegen"
+"Invalid value(s) for Qty to Ship","Ongeldige waarde(n) voor Aantal te verzenden"
 "Invoice","Factuur"
 "Invoice #","Factuurnummer"
 "Invoice # ","Factuurnummer "
@@ -313,6 +322,7 @@
 "Invoice void problem","Probleem met nietig verklaaring factuur"
 "Invoice will be created without communication with payment gateway.","Factuur zal worden aangemaakt zonder communicatie met het betaalplatform"
 "Invoiced","Gefactureerd"
+"Invoiced:","Gefactureerd:","en_US_1.9.1","en_US_1.9.3.7"
 "Invoices","Facturen"
 "Is Closed","Afgerond"
 "Item","Artikel"
@@ -334,7 +344,8 @@
 "Key","Sleutel"
 "Last Name","Achternaam"
 "Last Ordered Items","Laatst bestelde artikelen"
-"Last status can't be unassigned from state.","Laatste status kan in niet worden losgekoppeld van staat"
+"Last status can't be unassigned from state.","Laatste status kan in niet worden losgekoppeld van staat."
+"Last status can\'t be unassigned from state.","Laatste status kan in niet worden losgekoppeld van staat.","en_US_1.5.0","en_US_1.9.3.7"
 "Length","Lengte"
 "Link to the New Order","Link naar de nieuwe bestelling"
 "Link to the Previous Order","Link naar de vorige bestelling"
@@ -347,6 +358,7 @@
 "Maximum shipping amount allowed to refund is: %s","Maximale verzendbedrag voor terugbetaling is: %s"
 "Message","Bericht"
 "Message:","Bericht:"
+"Middle Name","Midden-naam","en_US_1.9.2.0","en_US_1.9.3.7"
 "Minimum Amount","Minimum aantal"
 "Minimum Order Amount","Minimum bestelbedrag"
 "Mixed","Gemengd"
@@ -453,6 +465,7 @@
 "Order credit memo","Nieuwe creditfactuur"
 "Order does not allow to be canceled.","Niet toegestaan bestelling te annuleren"
 "Order invoice","Factuur bestelling"
+"Order is suspended as its authorizing amount %s is suspected to be fraudulent.","Order is geschorst omdat het te authoriseren bedrag %s als fraudulent gemarkeerd is."
 "Order is suspended as its capture amount %s is suspected to be fraudulent.","Bestelling is uitgesteld gezien het geïnde bedrag %s verdacht wordt van fraude."
 "Order object is not specified.","Bestel-object is niet gespecificeerd."
 "Order saving error: %s","Fout tijdens opslaan van bestelling: %s"
@@ -634,6 +647,7 @@
 "Select","Selecteren"
 "Select All","Alles selecteren"
 "Select from existing customer addresses:","Selecteer uit bestaande klantenadressen"
+"Selected option(s) or their combination is not currently available.","De geselecteerde optie(s) of de combinatie hiervan is op dit moment niet beschikbaar."
 "Send Credit Memo Comment Email Copy To","Kopie notitie bij creditfactuur mailen aan"
 "Send Credit Memo Comments Email Copy Method","Verstuur creditfactuur-opmerkingen e-mail kopie methode"
 "Send Credit Memo Email Copy Method","Verstuur creditfactuur-opmerkingen e-mail methode"
@@ -694,7 +708,10 @@
 "Size","Formaat"
 "Sku","Artikelnummer"
 "Sold to:","Verkocht aan:"
+"Some item options or their combination are not currently available.","Sommige item opties of de combinatie hiervan zijn op dit moment niet beschikbaar."
+"Some of the products below do not have all the required options.","Sommige van de producten hieronder hebben niet alle verplichte opties."
 "Some of the products below do not have all the required options. Please edit them and configure all the required options.","Sommige van de producten hieronder hebben niet alle verplichte opties. Wijzig ze en configureer alle verplichte opties."
+"Some of the selected options are not currently available.","Sommige van de geselecteerde opties zijn op dit moment niet beschikbaar."
 "Sorry, no quotes are available for this order at this time.","Er zijn op dit moment geen verzendmethodes beschikbaar voor deze bestelling. Neem contact op om deze producten alsnog te bestellen."
 "Source object is not specified.","Bronobject is niet gespecificeerd"
 "Specified profile does not exist.","Opgegeven abonnement bestaat niet"
@@ -759,9 +776,11 @@
 "The transaction ""%s"" cannot be captured yet.","De betaling van de transactie ""%s"" kan niet bevestigd worden."
 "The value that you entered is not valid.","De waarde dat je hebt toegevoegd is niet geldig"
 "There are no billing agreements yet.","Er zijn (nog) geen incasso-overeenkomsten."
-"There are no recurring profiles yet.","Er zijn (nog) geen abonnementen."
 "There are no printable documents related to selected orders.","Er zijn geen printbare documenten gerelateerd aan de geselecteerde bestellingen"
+"There are no recurring profiles yet.","Er zijn (nog) geen abonnementen."
 "There are no shipping labels related to selected %s.","Er zijn geen verzendlabels gerelateerd aan de geselecteerden %s."
+"There are no shipping labels related to selected orders.","Er zijn geen verzendlabels gerelateerd aan de geselecteerde bestellingen."
+"There are no shipping labels related to selected shipments.","Er zijn geen verzendlabels gerelateerd aan de geselecteerde verzendingen."
 "There is no need to approve this payment.","Er is geen noodzaak om deze betaling te accorderen"
 "There is no need to deny this payment.","Er is geen noodzaak om deze betaling te annuleren"
 "There is no update for the payment.","Er is geen nieuwe update voor deze betaling"
@@ -828,7 +847,9 @@
 "Unsupported transaction type ""%s"".","Ongeldig transactietype ""%s""."
 "Update Changes","Wijzigingen bijwerken"
 "Update Items and Qty's","Producten en aantallen bijwerken"
+"Update Items and Qty\'s","Producten en aantallen bijwerken","en_US_1.4.0","en_US_1.9.3.7"
 "Update Qty's","Aantallen bijwerken"
+"Update Qty\'s","Aantallen bijwerken","en_US_1.4.0","en_US_1.9.3.7"
 "Updated At","Bijgewerkt op"
 "Updated:","Bijgewerkt:"
 "Use Aggregated Data (beta)","Toon recente data (beta)"
@@ -852,12 +873,16 @@
 "Wrong quote item id to update configuration.","Verkeerd offerte-item-ID om configuratie bij te werken."
 "Wrong state: ""%s"".","Onjuiste staat: ""%s""."
 "Yes","Ja"
-"You can leave a box blank if you don't wish to add a gift message for whole order","U kunt dit veld leeg laten als u geen cadeau-bericht wilt toevoegen aan de gehele bestelling"
+"You can leave a box blank if you don't wish to add a gift message for whole order","U kunt dit veld leeg laten als u geen cadeau-bericht wilt toevoegen aan de gehele bestelling."
+"You can leave a box blank if you don\'t wish to add a gift message for whole order","U kunt dit veld leeg laten als u geen cadeau-bericht wilt toevoegen aan de gehele bestelling.","en_US_1.5.0","en_US_1.9.3.7"
+"You don't have permissions to manage this order because of one or more products are not permitted for your website.","U heeft geen rechten om deze bestelling te beheren omdat één of meerdere producten niet toegestaan zijn op uw website."
+"You don\'t have permissions to manage this order because of one or more products are not permitted for your website.","U heeft geen rechten om deze bestelling te beheren omdat één of meerdere producten niet toegestaan zijn op uw website.","en_US_1.8.1","en_US_1.9.3.7"
 "You have placed no orders.","U hebt tot op heden nog geen bestellingen geplaatst."
 "You will be redirected to the payment system website.","U wordt doorgestuurd naar de beveiligde betaalomgeving."
 "Your credit card will be charged for","Uw creditcard zal in rekening gebracht worden voor"
+"ZIP Code","Postcode","en_US_1.9.1","en_US_1.9.3.7"
 "ZIP/Post Code","Postcode"
-"Zip/Postal Code","Zip Code"
+"Zip/Postal Code","Postcode"
 "cm","cm"
 "in","inch"
 "kg","kilo"
@@ -870,18 +895,3 @@
 "the order confirmation email was sent","de emailbevestiging is <em>wel verzonden</em>"
 "the shipment email is not sent","de verzendemail is <em>niet verzonden</em>"
 "the shipment email was sent","de verzendemail is <em>wel verzonden</em>"
-"* Required Fields","* Verplichte velden"
-"IPN ""Refunded"". Refund issued by merchant. Registered notification about refunded amount of %s. Transaction ID: ""%s"". Credit Memo has not been created. Please create offline Credit Memo.","IPN "Terug betaald". Terug betaling uitgevoerd door verkoper. Notificatie geregistreerd voor een bedrag van %s. Transactie ID: ""%s"". Creditfactuur is niet aangemaakt. Maak een offline creditfactuur aan a.u.b."
-"Order is suspended as its authorizing amount %s is suspected to be fraudulent.","Order is geschorst omdat het te authoriseren bedrag %s als fraudulent gemarkeerd is."
-"Selected option(s) or their combination is not currently available.","De geselecteerde optie(s) of de combinatie hiervan is op dit moment niet beschikbaar."
-"Some item options or their combination are not currently available.","Sommige item opties of de combinatie hiervan zijn op dit moment niet beschikbaar."
-"Some of the products below do not have all the required options.","Sommige van de producten hieronder hebben niet alle verplichte opties."
-"Some of the selected options are not currently available.","Sommige van de geselecteerde opties zijn op dit moment niet beschikbaar."
-"There are no shipping labels related to selected orders.","Er zijn geen verzendlabels gerelateerd aan de geselecteerde bestellingen."
-"There are no shipping labels related to selected shipments.","Er zijn geen verzendlabels gerelateerd aan de geselecteerde verzendingen."
-"Go to Home Page","Ga naar homepagina"
-"Home","Home"
-"Invalid value(s) for Qty to Ship","Ongeldige waarde(n) voor Aantal te verzenden"
-"You don't have permissions to manage this order because of one or more products are not permitted for your website.","U heeft geen rechten om deze bestelling te beheren omdat één of meerdere producten niet toegestaan zijn op uw website."
-"Create Order","Bestelling aanmaken"
-"Gift Wrapping for the Entire Order","Cadeau verpakking voor de gehele bestelling"
