--- a/app/locale/nl_NL/Mage_Wishlist.csv
+++ b/app/locale/nl_NL/Mage_Wishlist.csv
@@ -3,6 +3,7 @@
 "%d product(s) have been added to shopping cart: %s.","%d product(en) zijn toegevoegd aan uw winkelwagen: %s."
 "%s for ""%s"".","%s voor ""%s""."
 "%s has been moved to wishlist %s","%s is verplaatst naar uw verlanglijst %s"
+"%s was added to your shopping cart.","%s is toegevoegd aan je winkelwagen.","en_US_1.9.2.0","en_US_1.9.3.7"
 "%s's Wishlist","%s's verlanglijst"
 "* Required Fields","* Verplichte velden"
 "Add All to Cart","Alles toevoegen aan winkelwagen"
@@ -21,8 +22,13 @@
 "Can't delete item from wishlist","Kan product niet verwijderen van verlanglijst"
 "Can't save description %s","Kan omschrijving niet opslaan %s"
 "Can't update wishlist","Kan verlanglijst niet opslaan"
+"Can\'t delete item from wishlist","Kan product niet verwijderen van verlanglijst","en_US_1.5.0","en_US_1.9.3.7"
+"Can\'t save description %s","Kan omschrijving niet opslaan %s","en_US_1.4.0","en_US_1.9.3.7"
+"Can\'t update wishlist","Kan verlanglijst niet opslaan","en_US_1.4.2","en_US_1.9.3.7"
 "Cannot add item to shopping cart","Het item kan niet worden toegevoegd aan het winkelwagen"
+"Cannot add the following product(s) to shopping cart: %s.","Kan de volgende producten niet toevoegen aan de winkelwagen: %s"
 "Cannot add the item to shopping cart.","Het product kan niet worden toegevoegd aan het winkelwagen."
+"Cannot add the selected product to shopping cart because the product was removed from the wishlist","Cannot add the selected product to shopping cart because the product was removed from the wishlist","en_US_1.9.1","en_US_1.9.3.7"
 "Cannot configure product","Kan het product niet configureren"
 "Cannot load wishlist item","Kan de verlanglijst niet laden"
 "Cannot move item to wishlist","Kan het product niet naar je verlanglijst verplaatsen"
@@ -36,6 +42,7 @@
 "Comment:","Opmerking:"
 "Configure Wishlist Item","Product > Wijzig productopties (uit verlanglijst)"
 "Configured Price:","Geconfigureerde prijs:"
+"Could not find such wishlist","Kan verlanglijst niet vinden."
 "Could not find wishlist","Kon niet vinden op verlanglijst"
 "Customer My Account My Wishlist","Klant > Mijn Account > Verlanglijst"
 "Customer My Account Wishlist Sharing Form","Klant > Mijn Account > Verlanglijst deelformulier"
@@ -47,6 +54,7 @@
 "Email Sender","E-mail afzender"
 "Email Template","E-mail sjabloon"
 "Email address can't be empty.","E-mailadres mag niet leeg zijn"
+"Email address can\'t be empty.","E-mailadres mag niet leeg zijn.","en_US_1.4.0","en_US_1.9.3.7"
 "Email addresses, separated by commas","E-mailadressen, gescheiden door komma’s"
 "Enabled","Ingeschakeld"
 "General Options","Algemene opties"
@@ -65,9 +73,12 @@
 "Please enter a valid email addresses, separated by commas. For example johndoe@domain.com, johnsmith@domain.com.","Voer geldige e-mailadressen in, gescheiden door komma’s. Bijvoorbeeld iemand@domein.com, iemandanders@domein.com."
 "Please input a valid email address.","Voer een geldig E-mail adres in aub."
 "Please, enter your comments...","Voeg uw notities toe aub."
+"Price","Prijs","en_US_1.9.1","en_US_1.9.3.7"
 "Product","Artikel"
 "Product Details and Comment","Productdetails en opmerkingen"
 "Product(s) %s have required options. Each of them can be added to cart separately only.","De product(en) %s bevatten verplichte opties. Elk item kan afzonderlijk worden toegevoegd aan uw winkelwagen."
+"Product(s) %s have required options. Each product can only be added individually.","Product(en) %s hebben verplichte opties. Elk product kan enkel individueel toegevoegd worden."
+"Qty","Qty","en_US_1.9.1","en_US_1.9.3.7"
 "RSS Feed","RSS feed"
 "RSS link to %s's wishlist","RSS-link naar %s’s verlanglijst"
 "Remove Item","Artikel verwijderen"
@@ -75,6 +86,7 @@
 "Remove item","Verwijder dit artikel"
 "Requested cart item doesn't exist","Opgevraagde winkelwagen-product bestaat niet."
 "Requested wishlist doesn't exist","Opgevraagde verlanglijst bestaat niet"
+"SKU","SKU","en_US_1.9.1","en_US_1.9.3.7"
 "Share Options","Delen Opties"
 "Share Wishlist","Deel verlanglijst"
 "Share Your Wishlist","Deel uw verlanglijst"
@@ -83,7 +95,8 @@
 "This product(s) is currently out of stock","De product(en) zijn momenteel niet op voorraad."
 "Unable to add the following product(s) to shopping cart: %s.","De volgende product(en) kunnen niet worden toegevoegd aan het winkelwagen: %s."
 "Update Wishlist","Verlanglijst bijwerken"
-"User description","Beschrijving gebruikers"
+"User Description","Omschrijving gebruiker"
+"User description","Omschrijving gebruiker"
 "View Details","Details bekijken"
 "View Product","Product bekijken"
 "What's this?","Wat is dit?"
@@ -94,7 +107,3 @@
 "Wishlist is empty now.","Verlanglijst is nu leeg"
 "You have no items in your wishlist.","U hebt niets op uw verlanglijst staan"
 "Your Wishlist has been shared.","Uw verlanglijstje is opgeslagen."
-"User Description","Omschrijving gebruiker"
-"Cannot add the following product(s) to shopping cart: %s.","Kan de volgende producten niet toevoegen aan de winkelwagen: %s"
-"Could not find such wishlist","Kan verlanglijst niet vinden."
-"Product(s) %s have required options. Each product can only be added individually.","Product(en) %s hebben verplichte opties. Elk product kan enkel individueel toegevoegd worden."
